add java epi 14.4

--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -189,3 +189,45 @@ private static void findKLargestInBSTHelper(BSTNode<Integer> tree, int k, List<I
 
 시간 복잡도는 $O(h + k)$이다. 이는 트리가 균형 잡혀 있고 k가 작은 경우에 일반적인 중위 순회보다 더 빠르다. 복잡도의 상한은 다음과 같이 구할 수 있다. 이 프로그램은 많아야 h번 트리를 내려가고, 그 횟수는 적어도 트리를 다시 올라가는 횟수보다 많다. 또한 결과에 추가할 노드를 방문을 한 뒤에야 트리를 다시 올라간다. k개의 노드를 결과에 넣은 뒤에는 프로그램이 종료된다.
 
+## 문제 14.4 이진 탐색 트리에서 최소 공통 조상 구하기
+
+이진 탐색 트리는 특별한 트리이므로 문제 9.4에 나와 있는 것처럼 최소 공통 조상(LCA)의 개념이 적용된다.
+
+이진 탐색 트리에서 두 노드의 최소 공통 조상을 구하는 것이 일반적인 이진 트리에서 최소 공통 조상을 구하는 것보다 보통 더 쉽지는 않다. 왜냐하면 구조적으로 이진 트리의 키값이 모두 같다고 했을 때 모든 이진 트리를 이진 탐색 트리로 볼 수 있기 때문이다. 하지만 중복된 키가 없는 경우에는 최소 공통 조상을 찾는 알고리즘을 개선할 수 있다.
+
+이진 탐색 트리와 노드 두 개가 입력으로 주어졌을 때, 두 노드의 최소 공통 조상을 반환하는 알고리즘을 설계하라. 예를 들어 그림 14.1의 이진 탐색 트리와 노드 C와 G가 입력으로 주어졌을 때, 여러분의 알고리즘은 B를 반환해야 한다. 중복된 키는 없다고 가정해도 좋다. 노드 안에 부모를 가리키는 참조 변수는 없다.
+
+> 힌트: 이진 탐색 트리의 속성을 활용하라.
+
+문제 9.3의 해법을 살펴보면 이진 트리에서 이 문제를 해결하는 알고리즘을 확인할 수 있다. 이 알고리즘은 후위 순회를 통해 문제를 해결한다. 두 노드의 최소 공통 조상은 두 노드를 방문한 이후에 가장 먼저 방문하는 노드가 된다. 노드의 개수가 n일 때 이 방법의 시간 복잡도는 $O(n)$이 된다.
+
+이 방법은 이진 탐색 트리에 중복된 키가 없는 경우에 좀 더 개선될 여지가 있다. 그림 14.1의 이진 탐색 트리와 노드 C, G를 확인해 보자. C와 G의 키는 A의 키보다 작으므로 최소 공통 조상은 A의 왼쪽 부분 트리에 있어야 한다. B를 살펴보면 C의 키는 B보다 작고 B의 키는 G보다 작다. 따라서 B가 C와 G의 최소 공통 조상이 된다.
+
+두 노드 s와 b의 최소 공통 조상을 구해 보자. 일반성을 잃지 않고 s의 키가 b의 키보다 작다고 가정한다(중복된 키가 없다고 가정했기 때문에 s와 b의 키가 같을 수는 없다). 이진 탐색 트리의 루트에 저장된 키를 살펴보면 다음과 같은 네 가지 가능성이 존재한다.
+
+- 루트의 키가 s 혹은 b의 키와 같으면, 루트가 최소 공통 조상이 된다.
+- s의 키가 루트의 키보다 작고 b의 키가 루트의 키보다 크다면, 루트가 최소 공통 조상이 된다.
+- s와 b의 키가 모두 루트보다 작다면, 최소 공통 조상은 루트의 왼쪽 부분 트리에서 찾을 수 있다.
+- 두 노드의 키가 모두 루트보다 크다면, 최소 공통 조상은 루트의 오른쪽 부분 트리에서 찾을 수 있다.
+
+```java
+// 입력 노드는 null이 아니고 노드 s의 값이 노드 b의 키값보다 작거나 같다.
+public static BSTNode<Integer> findLCA(BSTNode<Integer> tree,
+                                       BSTNode<Integer> s,
+                                       BSTNode<Integer> b) {
+    BSTNode<Integer> p = tree;
+    while (p.data < s.data || p.data > b.data) {
+        // p가 [s, b]의 범위 안에 없으므로 계속 탐색한다.
+        while (p.data < s.data) {
+            p = p.right; // 최소 공통 조상은 p의 오른쪽 부분 트리에 있다.
+        }
+        while (p.data > b.data) {
+            p = p.left; // 최소 공통 조상은 p의 왼쪽 부분 트리에 있다.
+        }
+    }
+    // 이제 s.data >= p.data && p.data <= b.data이다.
+    return p;
+}
+```
+
+매번 트리를 한 칸씩 내려가므로, 트리의 높이가 h일 때 시간 복잡도는 $O(h)$가 된다.
