--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -231,3 +231,82 @@ public static BSTNode<Integer> findLCA(BSTNode<Integer> tree,
 ```
 
 매번 트리를 한 칸씩 내려가므로, 트리의 높이가 h일 때 시간 복잡도는 $O(h)$가 된다.
+
+## 문제 14.5 순회한 데이터를 통해 이진 탐색 트리 재구성하기
+
+문제 9.12에서 얘기했듯이 중위순회로 방문한 노드의 수열은 같지만 실제 이진 트리의 모양은 다른 경우가 무수히 많다. 전위 순회와 후위 순회도 마찬가지이다. 하지만 중위 순회로 방문한 노드의 수열과 전위 순회 혹은 후위 순회로 방문한 노드의 수열이 함께 주어졌다면, 유일한 이진 트리를 찾을 수 있다. 여기서는 트리가 이진 탐색 트리라는 사실을 알고 있을 때, 한 가지 방문 수열만으로 트리를 재구성할 수 있는지 살펴볼 것이다.
+
+중요한 사실은 트리에 저장된 원소가 중복되지 않았다는 점이다. 만약 루트의 키가 v이고 다른 노드의 키도 v가 될 수 있다면, v 이후의 수열이 v의 왼쪽 부분 트리인지 오른쪽 부분 트리인지 판별할 수가 없다. 예를 들어 그림 14.2에서 G가 해당 트리의 루트라고 했을 때, 이를 전위 순회한다면 그 수열은 285, 243, 285, 401이 된다. 하지만 285가 왼쪽 부분 트리 243의 오른쪽 자식노드이고 401이 루트의 오른쪽 자식노드인 경우에도 전위 순회의 결과는 같다.
+
+이진 탐색 트리를 중위 순회로 방문한 키의 시퀀스가 주어졌다고 가정하자. 중복된 키값은 없다. 이 시퀀스를 통해 이진 탐색 트리를 재구성할 수 있을까? 만약 그렇다면 프로그램을 작성해 보라. 전위 순회와 후위 순회의 결과가 주어졌을 때도 같은 문제를 풀어 보라.
+
+> 힌트: 키가 1,2,3인 다섯 개의 이진 탐색 트리를 구린 후 그에 해당하는 순회 순서를 살펴보라.
+
+머넞, 실험을 통해 중위 순회 결과만으로는 트리를 재구성하기 부족하다는 사실을 알 수 있다. 예를 들어, 키의 시퀀스가 1,2,3인 경우에는 그림 14.3과 같이 다섯 개의 서로 다른 이진 탐색 트리가 존재한다.
+
+하지만 전위 순회의 경우에는 얘기가 달라진다. 예를 들어 전위 순회의 키 방문 시퀀스가 <43, 23, 37, 29, 31, 41, 47, 53>이라고 하자. 가장 먼저 방문한 노드가 43이므로 이 노드는 반드시 루트가 된다. 왼쪽 부분 트리는 43보다 작은 23, 37, 29, 31, 41이 되고, 오른쪽 부분 트리는 43보다 큰 47, 53이 된다. 또한 <23,37,29,31,41>은 왼쪽 부분 트리의 전위 순회 결과이고 <47,53>은 오른쪽 부분 트리의 전위 순회 결과이다. 재귀적인 이유에 의해 23과 47이 왼쪽 부분 트리와 오른쪽 부분 트리의 루트라는 사실을 알 수 있고, 이를 계속해 나가면 전체 트리를 알 수 있다. 그 결과는 그림 14.1에서 I를 루트로 한 부분 트리와 같다.
+
+이를 일반화하면 임의의 전위 순회 시퀀스가 주어졌을 때, 첫 번째 노드가 루트가 된다. 그 뒤에 두 번째 원소부터 시작해서 루트의 키보다 작은 원소까지의 부분 시퀀스가 루트의 왼쪽 부분 트리를 전위 순회한 결과와 같다. 그 뒤의 나머지 시퀀스, 즉 루트보다 큰 키의 부분 시퀀스는 루트의 오른쪽 부분 트리를 전위 순회한 결과와 같다. 이 두 부분 시퀀스를 통해 왼쪽과 오른쪽 부분 트리를 재귀적으로 만들어 가면 전체 이진 탐색 트리를 만들 수 있다.
+
+```java
+public static BSTNode<Integer> rebuildBSTFromPreorder(List<Integer> preorderSequence) {
+    return rebuildBSTFromPreorderHelper(preorderSequence, 0, preorderSequence.size());
+}
+
+// preorderSequence.subList(start, end)로부터 이진 탐색 트리를 만들어 낸다.
+private static BSTNode<Integer> rebuildBSTFromPreorderHelper(List<Integer> preorderSequence, int start, int end) {
+    if (start >= end) {
+        return null;
+    }
+    int transitionPoint = start + 1;
+    while (transitionPoint < end
+        && Integer.compare(preorderSequence.get(transitionPoint),
+                           preorderSequence.get(start)) < 0) {
+        ++transitionPoint;
+    }
+    return new BSTNode<>(
+        preorderSequence.get(start),
+        rebuildBSTFromPreorderHelper(preorderSequence, start + 1, transitionPoint),
+        rebuildBSTFromPreorderHelper(preorderSequence, transitionPoint, end)
+    );
+}
+```
+
+이 알고리즘에서 최악은 입력으로 왼쪽으로 치우친 트리의 전위 순회 시퀀스가 주어졌을 경우다. 최악의 경우에 시간 복잡도는 $W(n) = W(n - 1) + O(n)$이므로 $O(n^2)$이 된다. 최선의 입력은 오른쪽으로 치우친 트리이고, 이 경우의 시간 복잡도는 $O(n)$이다. 균형 잡힌 이진 탐색 트리의 경우에는 $B(n) = 2B(n/2) + O(n)$이고, 이는 $O(n \log n)$과 같다.
+
+이 구현 방법은 노드를 여러 번 반복해서 순회하므로 잠재적인 낭비가 존재한다. 왼쪽 부분 트리에 속한 노드가 무엇인지 확인하는 순간 왼쪽 부분 트리를 함께 만들어 나가면 알고리즘을 더 개선할 수 있다. 다음은 이 방법을 구현한 코드이다. 이 방법의 핵심은 루트보다 작은 원소 중에 가장 뒤에 있는 원소를 찾고, 그다음 다시 첫 번째 원소로 돌아가지 않는 것이다. 우리가 만들고 싶은 부분 트리의 키의 범위를 알고 있으면 다시 돌아가지 않아도 부분 트리를 만들 수 있다. 예를 들어 부분 시퀀스 <23,37,29,31,41>을 재귀적으로 다시 순회하지 말고 전체 시퀀스 <43,23,37,29,31,41,47,53>을 살펴보자. 부분 시퀀스를 구하려면 부분 시퀀스의 마지막 원소를 찾기 위해 순회하는 작업이 필요하다. 그보다는 전체 시퀀스 <23,37,29,31,41,47,53>에서 43보다 작은 키만을 사용해서 재귀적으로 부분 트리를 만들어 나가면 된다.
+
+```java
+// 전역 변수, 현재 부분 트리를 추적한다.
+private static Integer rootIdx;
+
+public static BSTNode<Integer> rebuildBSTFromPreorder(List<Integer> preorderSequence) {
+    rootIdx = 0;
+    return rebuildBSTFromPreorderHelper(preorderSequence, Integer.MIN_VALUE, Integer.MAX_VALUE);
+}
+
+// preorderSequence에서 (lowerBound, upperBound) 사이에 있는 키값을 통해
+// rootIdx를 루트로 한 부분 이진 탐색 트리를 만든다.
+private static BSTNode<Integer> rebuildBSTFromPreorderOnValueRange(List<Integer> preorderSequence, Integer lowerBound, Integer upperBound) {
+    if (rootIdx == preorderSequence.size()) {
+        return null;
+    }
+
+    Integer root = preorderSequence.get(rootIdx);
+    if (root < lowerBound || root > upperBound) {
+        return null;
+    }
+    ++rootIdx;
+
+    // rebuildBSTFromPreorderOnValueRange는 rootIdx를 갱신한다는 점에 주의하자.
+    // 따라서 다음 두 함수의 호출 순서는 굉장히 중요하다.
+    BSTNode<Integer> leftSubtree = rebuildBSTFromPreorderOnValueRange(preorderSequence, lowerBound, root);
+    BSTNode<Integer> rightSubtree = rebuildBSTFromPreorderOnValueRange(preorderSequence, root, upperBound);
+    return new BSTNode<>(root, leftSubtree, rightSubtree);
+}
+```
+
+각 노드에서 상수만큼의 작업을 수행하므로 최악의 경우에 시간 복잡도 $O(n)$이 된다. 문제 24.20의 해법과 비슷한 점을 발견할 수 있다.
+
+후위 순회가 주어졌을 때도 유일한 이진 탐색 트리를 만들 수 있고, 그 알고리즘은 전위 순회를 사용했을 때와 굉장히 비슷하다.
+
