--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -310,3 +310,50 @@ private static BSTNode<Integer> rebuildBSTFromPreorderOnValueRange(List<Integer>
 
 후위 순회가 주어졌을 때도 유일한 이진 탐색 트리를 만들 수 있고, 그 알고리즘은 전위 순회를 사용했을 때와 굉장히 비슷하다.
 
+## 문제 14.6 세 개의 정렬된 배열에서 가장 가까운 원소 찾기
+
+정렬된 배열 세 개가 주어졌을 때, 세 개의 배열에서 원소를 하나씩 꺼내서 이들 사이의 거리가 최소가 되도록 하라. 예를 들ㅇ러 세 개의 배열이 각각 <5,10,15>, <3,6,9,12,15>, <8,16,24>라면 각각 15,15,16을 꺼냈을 때 이들 사이의 거리가 최소가 된다.
+
+> 힌트: 하나의 정렬된 배열에서 위의 조건을 만족하는 원소 세 개를 고른다면 어떻게 할 것인가?
+
+무식한 방법은 삼중 루프를 사용해서 모든 가능한 경우를 다 살펴보는 것이다. 어떤 숫자 집합이 있을 때 이들 사이의 거리는 단순하게 그 집합의 최댓값과 최솟값의 차이와 같다. 배열 세 개의 길이가 각각 l, m, n일 때 시간 복잡도는 $O(lmn)$이 된다.
+
+이 무식한 방법은 입력 배열이 정렬되어 있다는 사실을 사용하지 않았다. 문제에서 언급한 예제에서 <5,3,16>과 <5,3,24>에서의 최소 거리는 <5,3,8>을 함께 고려했을 때보다 반드시 커야한다. 왜냐하면 5,3,8의 최댓값은 8이고 8 < 16 < 24이기 때문이다.
+
+먼저 각 배열의 가장 작은 값부터 시작하자. s는 이 세개의 값 중에서 가장 작은 값을 나타내고 t는 가장 큰 값을 나타낸다고 하자. 그럼 이 세 개의 숫자 사이의 거리는 [s,t]가 된다.
+
+이제 s를 후보에서 지운 뒤 s가 들어 있던 배열에서 그 다음으로 작은 값을 꺼낸다. s'와 t'가 숫자 세 개 중에서 그 다음으로 가장 작은 숫자와 가장 큰 숫자라고 했을 때 s'는 숫자 세 개의 거리를 나타낼 때 왼쪽 끝이 된다. 왜냐하면 다른 두 값이 반드시 s'보다 크거나 같기 때문이다. 세 개의 숫자 중에서 가장 작은 원소를 꺼내고 해당 원소가 들어 있던 배열에서 그 다음으로 작은 값을 꺼내는 걸 반복한다.
+
+예를 들어 <5,3,8>에서 시작해 보자.
+
+- 이들의 구간은 왼쪽 끝이 3이고 그 길이는 8-3=5가 된다.
+- 3 다음으로 가장 작은 원소는 6이므로 그 다음 숫자 세 개는 <5,6,8>이 된다. 이들의 구간은 왼쪽이 5이고 그 길이는 8-5=3이다.
+- 5 다음으로 가장 작은 원소는 10이므로 그 다음 숫자 세 개는 <10,6,8>이 된다. 이들의 구간은 왼쪽 끝이 6이고 그 길이는 10-6-4가 된다.
+- 6 다음 원소는 9이므로 그 다음 숫자 세 개는 <10,9,8>이 된다.
+
+이를 반복해 나가면 <10,9,16>, <10,12,16>, <15,12,16>, <15,15,16>의 순서대로 선택하게 된다. 이들 중에서 숫자 사이의 가장 거리 짧은 숫자 세 개는 <15,15,16>이 된다.
+
+다음은 이 문제를 일반화한 코드이다. k개의 정렬된 배열에서 가장 가까운 원소 k개를 찾는다. k개의 원소에서 반복적으로 삽입, 삭제, 최솟값 찾기, 최댓값 찾기와 같은 연산을 해야 하므로 자연스럽게 이진 탐색 트리를 사용했다.
+
+```java
+public static class ArrayData implements Comparable<ArrayData> {
+    public int val;
+    public int idx;
+
+    public ArrayData(int idx, int val) {
+        this.val = val;
+        this.idx = idx;
+    }
+
+    @Override
+    public int compareTo(ArrayData o) {
+        int result = Integer.compare(val, o.val);
+        if (result == 0) {
+            result = Integer.compare(idx, o.idx);
+        }
+        return result;
+    }
+}
+```
+
+전체 원소가 n개이고 배열의 개수가 k일 때 시간 복잡도는 $O(n \log k)$가 된다. 이 문제는 특별히 k=3이므로 $O(n \log 3) = O(n)$이 된다.
