--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -357,3 +357,92 @@ public static class ArrayData implements Comparable<ArrayData> {
 ```
 
 전체 원소가 n개이고 배열의 개수가 k일 때 시간 복잡도는 $O(n \log k)$가 된다. 이 문제는 특별히 k=3이므로 $O(n \log 3) = O(n)$이 된다.
+
+## 문제 14.7 $a+b\sqrt{2}$꼴의 숫자 나열하기
+
+a와 b가 음이 아닌 정수이고 q는 어떤 정수의 제곱이 아닌 정수값이라고 했을 때 $a + b\sqrt{q}$는 덧셈과 곱셈에 닫혀 있다는 특별한 속성이 있다. 그림 14.4에 이와 같은 꼴의 숫자 몇 가지를 나열했다.
+
+음이 아닌 정수 a와 b로 이루어진 $a + b\sqrt{2}$의 숫자 중에서 가장 작은 k개의 숫자를 효율적으로 찾는 알고리즘을 설계하라.
+
+> 힌트: 그래프상의 점을 체계적으로 나열하라.
+
+중요한 사실은 $\sqrt{2}$가 무리수라는 점이다. 즉, 어떤 정수 a,b에 대해서 $\frac{b}{a}$와 같을 수 없다. 따라서 x와 y가 정수이고 $x + y\sqrt{2} = x' + y'\sqrt{2}$를 만족한다면 $x = x'$이고 $y = y'$가 된다. (그렇지 않으면 $\sqrt{2} = \frac{x - x'}{y - y'}$가 되기 때문이다.)
+
+무식한 방법은 $0 \le a, b \le k - 1$ 사이의 모든 a,b에 대해서 $a + b\sqrt{2}$을 만족하는 숫자를 전부 나열하는 것이다. 이 숫자는 정확히 $k^2$개이고, k개의 작은 숫자는 반드시 이 중에 존재한다. 이 숫자를 정렬한 뒤에 k개의 가장 작은 숫자를 골라내면 된다. 시간 복잡도는 $O(k^2 \log (k^2)) = O(k^2 \log k)$가 된다.
+
+직관적으로 $k^2$개의 숫자를 모두 나열하는 건 낭비가 심하다. 우리가 필요한 건 오직 k개의 숫자이다.
+
+가장 작은 숫자는 $0 + 0\sqrt{2}$이다. 그 다음으로 작은 숫자는 $1 + 0\sqrt{2}$ 혹은 $0 + 1\sqrt{2}$이다. 여기서 다음 알고리즘을 추론할 수 있다. 가장 작은 숫자 k개를 뽑아내려고 한다. 이 실수 컬렉션은 $0 + 0\sqrt{2}$에서 시작한다. $a + b\sqrt{2}$를 뽑았다면 그 다음에는 $(a + 1) + b\sqrt{2}$와 $a + (b + 1)\sqrt{2}$를 후보 컬렉션에 넣어야 한다.
+
+여기서 사용하는 연산은 컬렉션에서 가장 작은 원소를 뽑아내고 새로운 원소를 삽입하는 연산이다. 같은 값을 여러 번 넣을 수도 있으므로, 같은 숫자를 여러 번 삽입했을 때 해당 숫자를 여러 개 만들지 않아야 한다. 이진 탐색 트리는 이런 연산을 다음과 같이 효과적으로 수행한다.
+
+먼저 $0 + 0\sqrt{2}로 초기화한다.
+
+이진 탐색 트리에서 최솟값인 $0 + 0\sqrt{2}$를 뽑아내고 $1 + 0\sqrt{2}$와 $0 + 1\sqrt{2}$를 이진 탐색 트리에 새로 넣는다.
+
+이진 탐색 트리에서 그다음 최솟값인 $1 + 0\sqrt{2}$를 뽑아내고, $2 + 0\sqrt{2}$와 $1 + 1\sqrt{2}$를 넣는다.
+
+이제 이진 탐색 트리에는 $0 + 1\sqrt{2} = 1.414, 2 + 0\sqrt{2} = 2, 1 + 1\sqrt{2} = 2.414$가 들어 있다.
+
+최솟값인 $0 + 1\sqrt{2}$를 뽑아내고 $1 + 1\sqrt{2}$와 $0 + 2\sqrt{2}$를 집어넣는다.
+
+첫 번째 값은 이미 존재하므로 최종적으로 $2 + 0\sqrt{2} = 2, 1 + 1\sqrt{2} = 2.414, 0 + 2\sqrt{2} = 2.828$이 이진 탐색 트리에 들어 있게 된다. (이 작은 예제에선 보이지 않겠지만, 이진 탐색 트리에 넣는 값이 이미 존재하는 값보다 더 작을 수도 있으므로, 이진 탐색 트리는 모든 값을 들고 있어야 한다.)
+
+```java
+public static class ABSqrt2 implements Comparable<ABSqrt2> {
+    public int a, b;
+    public double val;
+
+    public ABSqrt2(int a, int b) {
+        this.a = a;
+        this.b = b;
+        val = a + b * Math.sqrt(2);
+    }
+
+    @Override
+    public int compareTo(ABSqrt2 o) { return Double.compare(val, o.val); }
+}
+```
+
+반복할 때마다 한 번의 삭제와 두 번의 삽입 연산을 수행한다. 이런 삽입을 k번 시도하므로 시간 복잡도는 $O(k \log k)$가 된다. 최대 2k번의 삽입을 시도하므로 공간 복잡도는 $O(k)$가 된다.
+
+이제 $O(n)$ 시간의 해법을 소개할 것이다. 구현하기는 쉽지만 이진 탐색 트리를 기반으로 하는 방법보다 이해하기는 쉽지 않다. 기본적으로 (n + 1)번째 값은 1혹은 $\sqrt{2}$와 이전 값을 더한 결과이다. 모든 결과를 순회하면서 n번째 값보다 큰 값 중에서 가장 작은 값을 구할 수도 있지만, 이렇게 하면 (n + 1)번째 결과를 구하는 데 $O(n)$ 시간이 소요된다.
+
+직관적으로 (n + 1)번째 값을 구하는 데 이전의 값을 전부 살펴볼 필요는 없다. 배열 A에 결과를 저장하고 있다고 하자. 우리는 여기서 두 개의 엔트리만 추적하면 된다. $A[i] + 1 \gt A[n - 1]$을 만족하는 가장 작은 인덱스 i와 $A[j] + \sqrt{2} \gt A[n - 1]$을 만족하는 가장 작은 인덱스 j. (n + 1)번째 값은 $A[i] + 1$과 $A[j] + \sqrt{2}$ 중에서 작은 값이 된다. (n + 1)번째 값이 $A[i] + 1$이라면 i를 증가시키고, $A[j] + \sqrt{2}$라면 j를 증가시킨다. 만약 이 둘의 값이 같다면 i와 j 모두 증가시킨다.
+
+A가 <0>으로 초기화되어 있고 i와 j가 0이라고 가정했을 때 계산 과정은 다음과 같다.
+
+1. $A[0] + 1 = 1 \lt A[0] + \sqrt{2} = 1.414$이므로 1을 A에 넣고 i를 증가시킨다. 이제 $A = <0, 1>, i = 1, j = 0$이 된다.
+2. $A[i] + 1 = 2 > A[0] + \sqrt{2} = 1.414$이므로 1.414를 A에 넣고 j를 증가시킨다. 이제 $A = <0, 1,1.414>, i = 1, j = 1$이 된다.
+3. $A[1] + 1 = 2 < A[1] + \sqrt{2} = 2.414$이므로 2를 A에 넣고 i를 증가시킨다. 이제 $A = <0, 1,1.414,2>, i = 2, j = 1$이 된다.
+4. $A[2] + 1 = 2.414 = A[1] + \sqrt{2} = 2.414$이므로 2.414을 A에 넣고 j를 증가시킨다. 이제 $A = <0, 1,1.414,2,2.414>, i = 3, j = 2$이 된다.
+5. $A[3] + 1 = 3 > A[2] + \sqrt{2} = 2.828$이므로 2.828을 A에 넣고 j를 증가시킨다. 이제 $A = <0, 1,1.414,2,2.828>, i = 3, j = 3$이 된다.
+6. $A[3] + 1 = 3 < A[3] + \sqrt{2} = 3.414$이므로 3을 A에 넣고 ㅑ를 증가시킨다. 이제 $A = <0, 1,1.414,2,2.828,3>, i = 4, j = 3$이 된다.
+
+```java
+public static List<Double> generateFirstKABSqrt2(intk) {
+    // a + b * sqrt(2) 꼴인 숫자 중에서 처음 k개의 숫자를 저장한다.
+    List<GeneratingABSqrt2.ABSqrt2> cand = new ArrayList<>();
+    cand.add(new GeneratingABSqrt2.ABSqrt2(0, 0));
+    int i = 0, j = 0;
+    for (int n = 1; n < k; n++) {
+        GeneratingABSqrt2.ABSqrt2 candIPlus1 = new GeneratingABSqrt2.ABSqrt2(cand.get(i).a + 1, cand.get(i).b);
+        GeneratingABSqrt2.ABSqrt2 candJPlusSqrt2 = new GeneratingABSqrt2.ABSqrt2(cand.get(i).a, cand.get(j).b + 1);
+        cand.add(candIPlus1.val < candJPlusSqrt2.val ? candIPlus1 : candJPlusSqrt2);
+
+        if (candIPlus1.compareTo(cand.get(cand.size() - 1)) == 0) {
+            ++i;
+        }
+        if (candJPlusSqrt2.compareTo(cand.get(cand.size() - 1)) == 0) {
+            ++j;
+        }
+    }
+    List<Double> result = new ArrayList<>();
+    for (GeneratingABSqrt2.ABSqrt2 c : cand) {
+        result.add(c.val);
+    }
+    return result;
+}
+```
+
+각 원소를 구하는 데 $O(1)$ 시간이 걸리므로 $a + b\sqrt{2}$ 꼴의 숫자 중에서 처음 n개의 숫자를 구하는 데는 $O(n)$ 시간이 걸린다.
