--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -446,3 +446,37 @@ public static List<Double> generateFirstKABSqrt2(intk) {
 ```
 
 각 원소를 구하는 데 $O(1)$ 시간이 걸리므로 $a + b\sqrt{2}$ 꼴의 숫자 중에서 처음 n개의 숫자를 구하는 데는 $O(n)$ 시간이 걸린다.
+
+## 문제 14.8 정렬된 배열에서 높이가 최소인 이진 탐색 트리 만들기
+
+정렬된 배열이 주어졌을 때, 만들 수 있는 이진 탐색 트리의 개수는 배열의 크기가 커질수록 무지막지하게 증가한다. 어떤 트리는 한쪽으로 기울어져 있거나 심지어 리스트에 가깝다. 또 다른 트리는 균형 잡혀 있다. 예제는 그림 14.3에서 찾아볼 수 있다.
+
+정렬된 배열에서 높이가 가능한 최소가 되는 이진 탐색 트리를 어떻게 만들 수 있는가?
+
+> 힌트: 어떤 원소가 루트가 되어야 할까?
+
+무식한 방법은 별로 도움이 되지 않는다. 주어진 배열로 만들 수 있는 모든 이진 탐색 트리를 나열한 뒤에 높이가 최소가 되는 트리를 탐색한다. 이 방법은 재귀로 구현하기도 쉽지 않고 시간 복잡도도 무지막지하다.
+
+직관적으로 높이가 최소가 되는 이진 탐색 트리는 가능한 부분 트리가 최대한 균형 잡혀 있어야 한다. 트리의 높이는 부분 트리 중 높이가 긴 부분 트리에 의해 결정되므로 하나를 다른 하나보다 짧게 만들 이유가 없다. 더 엄밀히 말해서 부분 트리의 노드 개수를 가능하면 비슷하게 유지해야 한다.
+
+배열의 길이를 n이라 하자. 최적으로 균형 잡힌 트리를 만들기 위해선 배열의 중앙에 있는 원소 $\lfloor\frac{n}{2}\rfloor$을 루트로 하고 양쪽의 부분배열을 사용해서 재귀적으로 높이가 최소인 이진 탐색 트리를 만들어 나가면 된다.
+
+예제를 통해 살펴보자. 만약 배열이 <2,3,5,7,11,13,17,19,23>이라면 루트는 중앙의 원소인 11이 된다. 왼쪽 부분 트리는 <2,3,5,7>을 통해 만들고 오른쪽 부분 트리는 <13,17,19,23>을 통해 만든다. 부분 트리의 높이를 최소로 만들기 위해 같은 함수를 재귀적으로 호출한다.
+
+```java
+public static BSTNode<Integer> buildMinHeightBSTFromSortedArray(List<Integer> A) {
+    return buildMinHeightBSTFromSortedASubrray(A, 0, A.size());
+}
+
+private static BSTNode<Integer> buildMinHeightBSTFromSortedASubrray(List<Integer> A, int start, int end) {
+    if (start >= end) {
+        return null;
+    }
+    int mid = start + ((end - start) / 2);
+    return new BSTNode<>(A.get(mid),
+                         buildMinHeightBSTFromSortedASubrray(A, start, mid),
+                         buildMinHeightBSTFromSortedASubrray(A, mid + 1, end));
+}
+```
+
+시간 복잡도 $T(n)$은 재귀적으로 $T(n) = 2T(n/2) + O(1)$이므로 $T(n) = O(n)$이 된다. 다른 방식으로 설명하자면, 재귀 함수를 정확히 n번 호출했고 매번 $O(1)$의 시간을 사용했으므로 총 시간 복잡도는 $O(1)$이 된다.
