add java epi 14.9

--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -480,3 +480,70 @@ private static BSTNode<Integer> buildMinHeightBSTFromSortedASubrray(List<Integer
 ```
 
 시간 복잡도 $T(n)$은 재귀적으로 $T(n) = 2T(n/2) + O(1)$이므로 $T(n) = O(n)$이 된다. 다른 방식으로 설명하자면, 재귀 함수를 정확히 n번 호출했고 매번 $O(1)$의 시간을 사용했으므로 총 시간 복잡도는 $O(1)$이 된다.
+
+## 문제 14.9 이진 탐색 트리의 노드 세 개가 완전히 정렬되어 있는지 확인하기
+
+이진 탐색 트리의 노드 두 개와 '중간' 노드인 또 다른 세 번째 노드가 주어졌을 때, 두 노드 중 하나가 '중간' 노드의 조상이고 다른 하나는 '중간' 노드의 자손인지 확인하는 프로그램을 작성하라. (조상 노드는 '중간' 노드와 동일하지 않으며, 자손 노드도 마찬가지다.) 예를 들어 그림 14.1에서 '중간' 노드가 J이고, 두 노드가 {A,K} 혹은 {I,M}인 경우에는 true를 반환해야 한다. 두 노드가 {I,P} 혹은 {J,K}라면 false를 반환한다. 중복된 키는 없다고 가정해도 좋다. 각 노드에는 부모를 가리키는 포인터가 존재하지 않는다.
+
+> 힌트: 세 개의 노드가 어떻게 배열되어 있어야 하는가?
+
+무식한 방법은 첫 번째 노드가 중간 노드의 조상인지 확인하고 두 번째 노드가 중간 노드의 자손인지 확인한다. 만약 참이라면, 그래도 true를 반환한다. 참이 아니라면, 첫 번째 노드와 두 번째 노드를 교환한 뒤에, 동일한 작업을 반복한다. 그림 14.1에 나오는 이진 탐색 트리에서 두 노드가 {L,I}이고 중간 노드가 K라면 L에서 시작해서 K를 찾을 순 없지만, I에서 시작해 K를 찾을 순 있다. 또한 K에서 시작해 L을 찾을 수 있으므로 true를 반환한다.
+
+트리의 높이가 h일 때 한 번 탐색하는 데 걸리는 시간은 $O(h)$이다. 이진 탐색 트리의 속성을 사용하면 두 자식 노드 중에서 하나를 제거할 수 있다. 탐색을 최대 세 번 반복하므로 전체 시간 복잡도는 $O(h)$가 된다.
+
+이 방법은 두 노드 중 어떤 노드가 중간 노드의 조상인지 모른다는 단점이 있다. 따라서 실제로는 자손인 노드에서 시작해서 중간 노드를 찾는 경우에는 최대 $O(h)$의 시간이 소요된다. 아무리 세 노드가 가까이 놓여 있더라도 말이다. (예를 들어 중간 노드는 I고 두 노드가 {A,J}인 경우다.)
+
+따라서 두 노드를 번갈아 가며 중간 노드를 찾는다면 이런 단점을 보완할 수 있다. 둘 중 하나가 중간 노드를 만났다면, 곧바로 중간 노드에서 시작해서 자손 노드를 탐색하면 된다. 이렇게 하면 부분 트리가 큰 경우에 탐색에 성공하지 못하는 상황을 피할 수 있다. 예를 들어 그림 14.1에서 두 노드가 {A,J}이고 중간 노드가 I일 때, A와 J에서 동시에 시작해서 I를 찾는다. A에서 시작해서 I를 찾은 순간 탐색을 구만둘 수 있으므로 J에서 시작한 탐색이 끝내 I를 찾지 못하는 상황을 피할 수 있다.(하지만 여전히 I에서 시작해서 J를 찾는 탐색을 수행해야 한다.)
+
+```java
+public static boolean pairIncludesAncestorAndDescendantOfM(
+    BSTNode<Integer> possibleAncOrDesc0,
+    BSTNode<Integer> possibleAncOrDesc1,
+    BSTNode<Integer> middle)
+{
+    BSTNode<Integer> search0 = possibleAncOrDesc0;
+    BSTNode<Integer> search1 = possibleAncOrDesc1;
+
+    // possibleAncOrDesc0와 possibleAncOrDesc1에서 시작해서 번갈아 가며
+    // 중간 노드를 찾는다.
+    while (search0 != possibleAncOrDesc1 &&
+           search0 != middle &&
+           search1 != possibleAncOrDesc0 &&
+           search1 !- middle &&
+           (search0 != null || search1 != null))
+    {
+        if (search0 != null) {
+            search0 = search0.data > middle.data ? search0.left : search0.right;
+        }
+        if (search1 != null) {
+            search1 = search1.data > middle.data ? search1.left : search1.right;
+        }
+    }
+
+    // 두 노드 모두 탐색에 실패하거나, possibleAncOrDesc1에서 시작해서 중간 노드를 찾지
+    // 못하고 possibleAncOrDesc1에 도달했거나, possibleAncOrDesc1에서 시작해서
+    // 중간 노드를 찾지 못하고 possibleAncOrDesc0에 도달했다면,
+    // 중간 노드는 possibleAncOrDesc0과 possibleAncOrDesc1 사이에 놓여 있지 않다.
+    if (search0 == possibleAncOrDesc1 ||
+        search1 == possibleAncOrDesc0 ||
+        (search0 != middle && search1 != middle))
+    {
+        return false;
+    }
+
+    // 코드가 여기에 도달했다면, possibleAncOrDesc0 혹은 possibleAncOrDesc1 중의 하나에서
+    // 중간 노드에 도달했다는 의미이다. 이제 중간 노드에서 possibleAncOrDesc1 혹은
+    // possibleAncOrDesc0 노드에 도달할 수 있는지 확인한다.
+    return search0 == middle ? searchTarget(middle, possibleAncOrDesc1)
+                             ? searchTarget(middle, possibleAncOrDesc0);
+}
+
+private static boolean searchTarget(BSTNode<Integer> from, BSTNode<Integer> target) {
+    while (from != null && from != target) {
+        from = from.data > target.data ? from.left : from.right;
+    }
+    return from == target;
+}
+```
+
+중간 노드와 한 쌍의 노드가 자손과 조상의 관계에 있다면 시간 복잡도는 $O(d)$가 된다. 여기서 d는 조상과 자손 사이의 높이 차를 말한다. 왜냐하면 두 노드가 번갈아 가면 중간 노드를 탐색할 때 최대 $O(d)$번 탐색을 하면 자손을 찾을 수 있기 때문이다. 만약 이들이 자손과 조상의 관계가 없다면, 전체 시간 복잡도는 트리의 높이와 같은 $O(h)$가 된다. 이는 이진 탐색 트리의 탐색에 필요한 시간 복잡도와 같다.
