--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -547,3 +547,93 @@ private static boolean searchTarget(BSTNode<Integer> from, BSTNode<Integer> targ
 ```
 
 중간 노드와 한 쌍의 노드가 자손과 조상의 관계에 있다면 시간 복잡도는 $O(d)$가 된다. 여기서 d는 조상과 자손 사이의 높이 차를 말한다. 왜냐하면 두 노드가 번갈아 가면 중간 노드를 탐색할 때 최대 $O(d)$번 탐색을 하면 자손을 찾을 수 있기 때문이다. 만약 이들이 자손과 조상의 관계가 없다면, 전체 시간 복잡도는 트리의 높이와 같은 $O(h)$가 된다. 이는 이진 탐색 트리의 탐색에 필요한 시간 복잡도와 같다.
+
+## 문제 14.10 범위 확인 문제
+
+지리적 위치 정보가 주어졌을 때, 가장 가까운 레스토랑을 반환하는 웹 서비스를 개발하는 문제를 생각해 보자. 이 서비스는 레스토랑의 위치 정보로 X와 Y좌표를 사용한다. 위치와 관련된 쿼리가 들어오면 가장 가까운 레스토랑을 반환해야 한다. (거리가 같은 레스토랑이 여러 개라면 아무거나 반환해도 된다.)
+
+한 가지 접근법은 두 개의 이진 탐색 트리를 사용해서 레스토랑의 위치를 저장하는 것이다. $T_x$에는 X좌표가 정렬되어 있고, $T_y$에는 Y좌표가 정렬되어 있다. (p,q)의 위치가 쿼리로 들어오면, X 좌표가 [p - D, p + D] 구간에 포함된 모든 레스토랑과 Y 좌표가 [q - D, q + D] 구간에 포함된 모든 레스토랑 중 교집합을 골라낸 뒤, 그중에서 (p, q)와 가장 가까운 레스토랑을 찾으면 된다. D만 잘 결정하면 선택된 부분 집합의 크기가 작아서 무식하게 탐색해도 가장 가까운 레스토랑을 빠르게 찾을 수 있다. 작은 값에서 시작해서 교집합이 공집합이 아닐 때까지 D의 값을 두 배씩 늘려가며 탐색한다.
+
+물론 더 적합한 다른 자료구조, 예를 들어 쿼드트리(Quadtrees)와 k-d 트리가 있긴 하지만 이 접근법으로도 실무에서 잘 동작한다.
+
+이진 탐색 트리와 구간이 입력으로 주어졌을 때, 해당 구간 안에 존재하는 이진 탐색 트리의 키를 반환하는 프로그램을 작성하라. 예를 들어 그림 14.1의 트리에서 구간이 [16, 31]이라면 17,19,23,29,31을 반환해야 한다.
+
+> 힌트: 후임자(successor) 함수를 m번 반복적으로 호출했을 때 얼마나 많은 간선을 순회하는가?
+
+무식한 방법은 이진 탐색 트리를 순회(전위 순회, 중위 순회, 후위 순회)하면서 해당 구간 안에 있는 키를 모두 기록하면 된다. 노드가 n개일 때 이 방법의 시간 복잡도는 $O(n)$이다.
+
+하지만 이 방법은 보통의 이진 트리에서도 동작하므로 이진 탐색 트리의 속성을 제대로 활용하지 않았다.
+
+불필요한 순회를 제거하기 위해 다음과 같은 이진 탐색 트리의 속성을 사용해 보자.
+
+- 만약 루트의 키가 구간의 왼쪽 끝보다 작다면, 왼쪽 부분 트리의 어떤 노드도 구간 안에 속하지 않는다.
+- 만약 루트의 키가 구간의 오른쪽 끝보다 크다면, 오른쪽 부분 트리의 어떤 노드도 구간 안에 속하지 않는다.
+- 만약 루트의 키가 구간 안에 속한다면, 왼쪽과 오른쪽 부분 트리 모두 구간 안에 속할 가능성이 있다.
+
+예를 들어 그림 14.1의 트리와 [16, 42]가 입력으로 주어졌다고 가정하자. 키값이 19인 A에서 순회를 시작한다. 19는 [16, 42]에 속하므로 A의 자식인 B와 I를 모두 탐색한다. B의 키값인 7은 16보다 작으므로 B의 왼쪽 부분 트리는 [16, 42] 구간에 속하지 않는다. 비슷하게 I의 키값인 43은 42보다 크기 때문에 I의 오른쪽 부분 트리는 탐색할 필요가 없다.
+
+```java
+private static class Interval {
+    public int left, right;
+
+    public Interval(int left, int right) {
+        this.left = left;
+        this.right = right;
+    }
+}
+
+public static List<Integer> rangeLookupInBST(BSTNode<Integer> tree, Interval interval) {
+    List<Integer> result = new ArrayList<>();
+    rangeLookupInBSTHelper(tree, interval, result);
+    return result;
+}
+
+public static void rangeLookupInBSTHelper(BSTNode<Integer> tree, Interval interval, List<Integer> result) {
+    if (tree == null) {
+        return;
+    }
+    if (interval.left <= tree.data && tree.data <= interval.right) {
+        // tree.data는 구간 안에 속한다.
+        rangeLookupInBSTHelper(tree.left, interval, result);
+        result.add(tree.data);
+        rangeLookupInBSTHelper(tree.right, interval, result);
+    } else if (interval.left > tree.data) {
+        rangeLookupInBSTHelper(tree.right, interval, result);
+    } else { // interval.right >= tree.data
+        rangeLookupInBSTHelper(tree.left, interval, result);
+    }
+}
+```
+
+시간 복잡도 분석은 살짝 까다롭다. 시간 복잡도를 특정 구간에 속한 키의 개수인 m과 관련있다고 생각할 수 있다. 노드를 두 그룹으로 나눠보자. 하나는 재귀 호출을 했던 그룹이고 다른 하나는 호출하지 않았던 그룹이라고 하자. 우리의 예제에서 프로그램은 A,B,F,G,H,I,J,K,L,M,N을 재귀적으로 호출한다. 이 키들이 전부 특정 구간에 속하는 건 아니지만, 이 키들 외의 노드들은 절대 구간에 속하지 않는다. 잘 살펴보면 이들을 세 가지 부분 집합으로 나눌 수 있다. 16의 탐색경로상에 있는 노드, 42의 탐색경로상에 있는 노드, 나머지 노드, 세 번째 부분 집합에 속한 노드들은 반드시 구간 안에 존재하지만, 앞의 두 부분 집합에 있는 노드들은 그럴 수도 있고 아닐 수도 있다. 처음 두 부분 집합을 구하는 데 걸리는 시간은 $O(h)$이고 세 번째 부분 집합을 구하는 데 걸리는 시간은 $O(m)$이다. 모든 간선은 트리를 밑으로 순회할 때와 위로 돌아올 때 두 번씩 방문한다. 따라서 전체 시간 복잡도는 $O(m + h)$가 된다. 이 방법은 트리가 균형 잡혀 있고 특정 구간 안에 속한 키의 개수가 적다면, 무식한 방법인 $O(n)$보다 훨씬 낫다.
+
+### 이진 탐색 트리 보강
+
+지금까지 우리가 생각했던 이진 탐색 트리는 각 노드가 키, 왼쪽 자식, 오른쪽 자식, 가능하면 부모 정보까지 가지고 있는 트리였다. 노드에 변수를 추가하면 특정 쿼리를 빠르게 처리할 수 있다. 예를 들어 다음 문제를 생각해 보겠다.
+
+삽입, 삭제, 정수값인 키 탐색, 구간 검색(해당 구간에 존재하는 키의 개수)을 효율적으로 수행하는 자료구조가 필요하다고 가정해 보자.
+
+이진 탐색 트리를 사용하면 삽입, 삭제, 탐색을 효율적으로 수행할 수 있다. [U,V] 구간에 존재하는 키의 개수를 셀 때는 U보다 크거나 같은 첫 번째 노드를 찾은 뒤 V보다 키값이 큰 노드(혹은 더 이상 노드가 없을 때까지)를 만날 때까지 후임자 함수(문제 9.10)를 호출하면 된다. h가 트리의 높이고 m이 구간 안에 속한 노드의 개수일 때 전체 시간 복잡도는 $O(h + m)$이 된다. m이 크다면 이 방법은 느릴 수밖에 없다.
+
+이진 탐색 트리의 노드에 변수를 추가하면 더 빠르게 할 수 있다. 특히, 각 노드를 루트로 하는 부분 트리의 전체 노드의 개수를 저장하는 size 변수를 추가한다.
+
+특정 값보다. 작은 원소의 개수를 찾는 경우만 우선 생각해 보자. 예를 들어 그림 14.1의 이진 탐색 트리의 각 노드가 size 정보를 가지고 있을 때, 40보다 작은 키의 개수를 찾는다. 루트 A의 키값인 19는 40보다 작으므로 이진 탐색 트리의 속성에 의해 A의 왼쪽 부분 트리는 모두 40보다 작다. 따라서 7(왼쪽 자식의 size를 통해 알 수 있다.)과 1(A 자신)을 더한 뒤에 A의 오른쪽 자식을 재귀 호출 하면 된다.
+
+이를 일반화해서 v보다 작은 모든 원소를 세어 보자. 일단 count 변수를 0으로 초기화한다. 트리에 중복된 키가 있을 수 있으므로 문제 14.2의 해법인 중위 순회를 사용해서 처음 등장하는 v를 찾는다. (만약 v가 존재하지 않는다면 그 사실을 알았을 때 탐색을 중지한다.) 왼쪽 자식을 순회할 때 count는 변하지 않는다. 오른쪽 자식을 순회할 때, '1 + 왼쪽 자식의 크기'만큼 count 변수에 더한다. 만약 v가 존재한다면 첫 번째 등장하는 v에 도달했을 때, v의 왼쪽 자식의 크기만큼 더해 준다. 같은 방법으로 v보다 큰 원소의 개수, v보다 작거나 같은 원소의 개수, v보다 크거나 같은 원소의 개수를 셀 수도 있다.
+
+예를 들어 그림 14.1의 이진 탐색 트리에서 40보다 작은 원소의 개수를 세어 보자.
+
+- A의 키값인 19는 40보다 작으므로 7 + 1 = 8을 count에 더해 주고 I로 넘어간다.
+- I의 키값인 43은 40보다 크므로 I의 왼쪽 자식인 J로 넘어간다.
+- J의 키값인 23은 40보다 작으므로 count를 8 + 1 = 9로 갱신하고 K로 넘어간다.
+- K의 키값인 37은 40보다 작으므로 count를 9 + 2 + 1 = 12로 갱신하고 N으로 넘어간다.
+- N의 키값인 41은 40보다 크므로 N의 왼쪽 자식으로 넘어간다.
+- 40보다 작은 키값이 더 이상 존재하지 않으므로 12를 반환한다.
+
+여기서 어떻게 A와 K의 왼쪽 부분 트리를 탐색하지 않게 되었는지 잘 살펴보길 바란다.
+
+탐색을 할 때마다 트리 아래로 내려가므로 시간 복잡도의 상한은 $O(h)$이다. m값이 큰 경우에는 (예를 들어 m값이 전체 노드 개수와 비슷한 경우) 이 방법이 반복적으로 후임자를 호출하는 것보다 훨씬 빠르다.
+
+[L, U] 구간 사이에 있는 키의 개수를 셀 때는 L보다 작은 키의 개수를 세고, U보다 큰 키의 개수를 센 뒤에 전체 노드의 개수(루트에 저장된 size값)에서 이들을 뺀다.
+
+size 변수는 삽입 혹은 삭제를 할 때 갱신되는데, 그 시간 복잡도가 $O(h)$를 벗어나지 않는다. 본질적으로, size 변수를 수정해야 하는 노드는 추가된 노드 혹은 삭제된 노드의 탐색 경로 상에 있는 노드들뿐이다. 이 경로상에 있는 각 노드에 대해 일부 조건부 검사가 필요하지만 상수 시간에 해결되므로 삽입/삭제에 소요되는 $O(h)$ 시간 복잡도를 벗어나지 않는다.
