--- a/java_epi/ch14/14.이진 탐색 트리.md
+++ b/java_epi/ch14/14.이진 탐색 트리.md
@@ -637,3 +637,78 @@ public static void rangeLookupInBSTHelper(BSTNode<Integer> tree, Interval interv
 [L, U] 구간 사이에 있는 키의 개수를 셀 때는 L보다 작은 키의 개수를 세고, U보다 큰 키의 개수를 센 뒤에 전체 노드의 개수(루트에 저장된 size값)에서 이들을 뺀다.
 
 size 변수는 삽입 혹은 삭제를 할 때 갱신되는데, 그 시간 복잡도가 $O(h)$를 벗어나지 않는다. 본질적으로, size 변수를 수정해야 하는 노드는 추가된 노드 혹은 삭제된 노드의 탐색 경로 상에 있는 노드들뿐이다. 이 경로상에 있는 각 노드에 대해 일부 조건부 검사가 필요하지만 상수 시간에 해결되므로 삽입/삭제에 소요되는 $O(h)$ 시간 복잡도를 벗어나지 않는다.
+
+## 문제 14.11 신용 정보 관리 서버 설계하기
+
+많은 수의 고객과 연결되어 있는 서버를 생각해 보자. 각 고객은 문자열로 구별한다. 각 고객은 음이 아닌 정수값인 '신용' 정보가 있다. 이 서버에는 어떤 고객이 추가됐는지, 삭제됐는디, 갱신됐는디, 탐색을 했는지 알 수 있는 자료구조가 필요하다. 추가로 이 서버는 모든 고객의 신용에 특정 값을 동시에 더할 수 있어야 한다.
+
+다음 메서드를 구현하는 자료구조를 설계하라.
+
+- 삽입: 특정 신용값과 함께 고객을 추가한다. 해당 고객이 존재한다면 새로운 고객 정보로 대체한다.
+- 삭제: 특정 고객을 삭제한다.
+- 탐색: 특정 고객의 신용값을 반환한다.
+- 모두의 신용값에 더하기: 모든 고객의 신용값에 특정 값을 더한다.
+- 최댓값: 신용값이 최대인 고객을 반환한다.
+
+> 힌트: 전역 상태를 추가로 사용해서 필요한 정보를 저장하라.
+
+이런 애플리케이션에서는 자연스럽게 해시 테이블을 떠올리게 된다. 하지만 해시 테이블은 최댓값을 효율적으로 찾는 연산이 없고, 모든 원소를 순회하면서 동시에 값을 더하는 확실한 방법도 없다. 이진 탐색 트리를 사용하면 최댓값을 효율적으로 찾을 수 있지만, 기본적으로 전체에 더하는 연산을 지원하지 않는다.
+
+객체에 어떤 행동을 추가하는 일반적인 원칙은 객체를 감싸는 래퍼(wrapper)를 만들어서 여기에 함수를 추가하는 것이다. 그리고 그 결과를 반환하기 전이나 후에 해당 행동을 적용한다. 여기서는 이진 탐색 트리에 고객을 저장하고, 전체 증가한 양을 추적하는 래퍼를 사용할 것이다.
+
+예를 들어 고객이 A,B,C이고, 각각 신용이 1,2,3이라고 해보자. 전체 신용에 5를 더하려면 래퍼에 총 증가한 양이 5라고 설정한다. 이진 탐색 트리에서 B의 신용값을 탐색하면 2를 반환하고, 여기에 5를 더한 값을 최종적으로 반환한다. 전체 신용에 4만큼 더하고 싶으면 단순하게 전체 증가한 양을 9로 갱신하면 된다.
+
+그런데 '모두에게 더하기' 연산을 호출한 후에 고객이 추가되면 문제가 발생한다. 앞의 예제를 계속해서 살펴보자. 이제 신용값이 6인 D를 추가한 뒤, D의 신용값을 탐색하면 6 + 9를 반환하게 된다. 실제로는 6을 반환해야 한다.
+
+이를 해결하는 해법은 간단하다. 전체 증가한 양을 신용값에서 뺀다. 즉, D를 추가할 때, 신용값을 6으로 설정하지 않고 6 - 9 = -3으로 설정한 뒤 이진 탐색 트리에 삽입한다. 이제 D의 신용값을 탐색하면 올바르게 -3 + 9 = 6을 반환한다.
+
+이진 탐색 트리의 키는 신용값이고, 이에 상응하는 값은 고객이 된다. 이렇게 하면 최댓값을 빠르게 찾을 수 있다. 하지만 고객을 빠르게 탐색하거나 삭제하려면, 이진 탐색 트리만으로는 부족하다. (고객ID가 아닌 신용값으로 순서가 매겨져 있기 때문에). 이때 키가 고객이고, 값이 신용값인 해시 테이블을 추가로 사용하면 이 문제를 해결할 수 있다. 탐색은 간단하다. 삭제를 하려면 해시 테이블을 통해 해당 고객의 신용값을 얻은 뒤, 이진 탐색 트리에서 해당 신용값과 같은 고객의 집합을 찾고 최종적으로 해당 고객을 집합에서 제거한다.
+
+```java
+public static class ClientsCreditsInfo {
+    private int offset = 0;
+    private Map<String, Integer> clientToCredit = new HashMap<>();
+    private NavigableMap<Integer, Set<String>> creditToClients = new TreeMap<>();
+
+    public void insert(String clientID, int c) {
+        remove(clientID);
+        clientToCredit.put(clientID, c - offset);
+        Set<String> set = creditToClients.get(c - offset);
+        if (set == null) {
+            set = new HashSet<>();
+            creditToClients.put(c - offset, set);
+        }
+        set.add(clientID);
+    }
+
+    public boolean remove(String clientID) {
+        Integer clientCredit = clientToCredit.get(clientID);
+        if (clientCredit != null) {
+            creditToClients.get(clientCredit).remove(clientID);
+            if (creditToClients.get(clientCredit).isEmpty()) {
+                creditToClients.remove(clientCredit);
+            }
+            clientToCredit.remove(clientID);
+            return true;
+        }
+        return false;
+    }
+
+    public int lookup(String clientID) {
+        Integer clientCredit = clientToCredit.get(clientID);
+        return clientCredit == null ? -1 : clientCredit + offset;
+    }
+
+    public void addAll(int c) {
+        offset += c;
+    }
+
+    public String max() {
+        return creditToClients.isEmpty()
+            ? ""
+            : creditToClients.lastEntry().getValue().iterator().next();
+    }
+}
+```
+
+삽입과 삭제 연산은 이진 탐색 트리의 특징에 따라 $O(\log n)$이 된다. 여기서 n은 자료구조 내의 고객 수에 해당된다. 탐색과 '모두에게 더하기' 연산은 해시테이블만 사용하므로 $O(1)$ 시간이 걸린다. 라이브러리의 이진 탐색 트리 구현은 최댓값 찾는 연산을 $O(1)$에 수행하기 위해 캐시를 사용한다.
