add java epi 15.1

--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -36,3 +36,47 @@ public static long GCD(long x, long y) {
 - 프로그램에서 **재귀를 삭제**하라는 요구가 있다면 **스택 자료구조**를 사용해서 호출 스택을 흉내 낼 수 있다. [문제 24.13]
 - **꼬리-재귀(tail-recursive)** 프로그램은 while을 사용해서 간단하게 재귀를 없앨 수 있다. 스택을 사용하지 않아도 된다. (컴파일러가 자동으로 최적화를 해준다.) [문제 4.7]
 - **동일한 인자(arguments)**로 재귀 함수를 한 번 이상 호출할 일이 생긴다면, 그 결과를 **캐시**에 저장하라. 이것이 바로 동적 프로그래밍이다. (16장)
+
+## 문제 15.1 하노이 타워 문제
+
+한 말뚝에 고리(ring)가 큰 것부터 작은 것 순으로 정렬되어 있다. 그림 15.2(a)의 상태에서 (b) 상태로 옮기고 싶다. 이때 크기가 큰 고리를 작은 고리 위에 둘 수 없다.
+
+n개의 고리를 다른 말뚝으로 옮기는 연산을 차례대로 출력하는 프로그램을 작성하라. 세 번째 말뚝은 비어 있다. 맨 처음 수행할 수 있는 유일한 연산은 가장 위에 있는 하나의 고리를 꺼낸 뒤 다른 말뚝으로 옮기는 것이다.
+
+> 힌트: n-1개의 고리를 옮기는 방법을 안다고 가정했을 때, n번쨰 고리는 어떻게 옮기겠는가?
+
+몇 개의 예를 통해 문제를 해결할 수 있는 통찰력을 얻을 수 있다. 고리가 세 개 있다면, 위에 있던 고리 두 개를 세 번째 말뚝으로 옮긴 뒤에, 가장 아래(가장 큰)에 있던 고리를 두 번째 말뚝으로 옮긴다. 그다음 첫 번째 말뚝을 사용해서 세 번째 말뚝에 있던 고리 두 개를 두 번째 말뚝으로 옮기면 된다. 고리 네 개를 옮기려면 위에 있던 고리 세 개를 세 번째 말뚝으로 옮긴 뒤에 가장 아래(가장 큰)에 있는 고리를 두 번째 말뚝으로 옮긴다. 그다음 첫 번째 말뚝을 사용해서 세 번째에 있던 고리 세 개를 두 번째 말뚝으로 옮기면 된다. 세 개의 고리를 옮기는 방법과 네 개의 고리를 옮기는 방법에서 첫 번째와 세 번째 단계가 같은 문제를 의미하므로 재귀를 떠올리게 된다. 그림 15.3은 이 방법을 나타내며, 구현 코드는 다음과 같다.
+
+```java
+private static final int NUM_PEGS = 3;
+
+public static List<List<Integer>> computeTowerHanoi(int numRings) {
+
+    List<Deque<Integer>> pegs = new ArrayList<>();
+    for (int i = 0; i < NUM_PEGS; i++) {
+        pegs.add(new ArrayDeque<Integer>());
+    }
+    // 말뚝의 상태를 초기화한다.
+    for (int i = numRings; i >= 1; --i) {
+        pegs.get(0).addFirst(i);
+    }
+    List<List<Integer>> result = new ArrayList<>();
+    computeTowerHanoiSteps(numRings, pegs, 0, 1, 2, result);
+    return result;
+}
+
+private static void computeTowerHanoiSteps(int numRingsToMove,
+                                           List<Deque<Integer>> pegs,
+                                           int fromPeg, int toPeg, int usePeg,
+                                           List<List<Integer>> result)
+{
+    if (numRingsToMove > 0) {
+        computeTowerHanoiSteps(numRingsToMove - 1, pegs, fromPeg, usePeg, toPeg, result);
+        pegs.get(toPeg).addFirst(pegs.get(fromPeg).removeFirst());
+        result.add(Arrays.asList(fromPeg, toPeg));
+        computeTowerHanoiSteps(numRingsToMove - 1, pegs, usePeg, toPeg, usePeg, result);
+    }
+}
+```
+
+실제 고리를 옮긴 횟수는 $T(n) = T(n - 1) + 1 + T(n - 1) = 1 + 2T(n - 1)$과 같다. 처음 $T(n - 1)$은 P1에서 P3으로 n - 1개의 고리를 옮긴 것을 뜻하고, 두 번째 $T(n - 1)$은 P3에서 P2로 n - 1개의 고리를 옮긴 것을 뜻한다. 이 수식을 풀면 $T(n) = 2^n - 1$이 된다. 이 수식을 나열해 보면 다음과 같다. $T(n) = 1 + 2 + 4 + ... + 2^kT(n - k)$가 된다. 고리를 하나 옮기는 데 $O(1)$ 시간이 걸리므로 전체 시간 복잡도는 $O(2^n)$이다.
