--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -80,3 +80,53 @@ private static void computeTowerHanoiSteps(int numRingsToMove,
 ```
 
 실제 고리를 옮긴 횟수는 $T(n) = T(n - 1) + 1 + T(n - 1) = 1 + 2T(n - 1)$과 같다. 처음 $T(n - 1)$은 P1에서 P3으로 n - 1개의 고리를 옮긴 것을 뜻하고, 두 번째 $T(n - 1)$은 P3에서 P2로 n - 1개의 고리를 옮긴 것을 뜻한다. 이 수식을 풀면 $T(n) = 2^n - 1$이 된다. 이 수식을 나열해 보면 다음과 같다. $T(n) = 1 + 2 + 4 + ... + 2^kT(n - k)$가 된다. 고리를 하나 옮기는 데 $O(1)$ 시간이 걸리므로 전체 시간 복잡도는 $O(2^n)$이다.
+
+## 문제 15.2 n개의 퀸이 서로 공격하지 못하는 상황을 모두 나열하기
+
+퀸을 공격받지 않는 안전한 상태로 두려면 같은 행, 열, 대각선상에 다른 퀸을 놓지 않아야 한다. 그림 15.4는 퀸이 안전하게 놓여 있다.
+
+입력으로 n이 주어졌을 때, n x n 크기의 체스판에 n개의 퀸이 안전하게 놓이는 모든 가능한 경우의 수를 반환하라.
+
+> 힌트: 첫 번째 퀸을 (i,j)에 놓았을 때, 나머지 퀸을 놓을 수 없는 곳은 어디인가?
+
+무식한 방법은 n개의 퀸을 가능한 모든 위치에 놓아 보는 것이다. 모든 가능한 횟수는 $\binom{n^2}{n}$이므로 n이 커지면 그 경우의 수가 빠르게 증가한다.
+
+퀸 두 개를 같은 행에 놓을 수 없으므로 모든 퀸을 다른 행에 놓도록 하면 좀 더 빠르게 풀 수 있다. 이렇게 하면 행이 겹치는 상황은 없지만, 열과 대각선에서 겹칠 수 있다. 이를 해결하기 위해 길이가 n인 배열을 사용해, i번째 행에서 퀸을 어디에 놓았는지 표현할 수 있다.
+
+예를 들어 n = 4인 경우에 첫 번째 행의 퀸을 0번 열에 놓았다고 가정하자. 이를 배열로 표현하면 (0,_,_,_)이 된다. 두 번째 행에서는 첫 번째 열에 퀸을 놓으면 안 되므로 (0,0,_,_)의 상황을 전부 제외한다. 두 번째 행에서 두 번째 열에 퀸을 놓으면 대각선으로 겹치므로 (0,1,_,_)의 상황을 전부 제외한다. 이제 (0,2,0,_)의 상황으로 넘어가자. 이렇게 놓으면 첫 번째 열이 겹치게 된다. (0,2,1,_)은 첫 번째 행의 두 번째 열 혹은 두 번째 행의 첫 번째 열의 퀸과 겹치게 된다. (0,2,2,_)는 두 번째 행의 두 번째 열과 겹치게 된다. (0,2,3,_)또한 대각선에서 겹치므로 (0,3,_,_)으로 넘어간다. (0,3,1,_)과 (0,3,2,_) 모두 겹치게 되므로 첫 번쨰 행의 첫 번째 열에 퀸을 놓으면 안 된다는 사실을 알 수 있다. 이를 반복하다 보면 서로 공격하지 않도록 퀸을 놓는 방법은 (1,3,0,2)와 (2,0,3,1)뿐이라는 사실을 알 수 있다.
+
+```java
+public static List<List<Integer>> nQueens(int n) {
+    List<List<Integer>> result = new ArrayList<>();
+    solveNQueens(n, 0, new ArrayList<Integer>(), result);
+}
+
+private static void solveNQueens(int n, int row, List<Integer> colPlacement, List<List<Integer>> result) {
+    if (row == n) {
+        // 모든 퀸을 놓을 수 있다.
+        result.add(new ArrayList<>(colPlacement));
+    } else {
+        for (int col = 0; col < n; col++) {
+            colPlacement.add(col);
+            if (isValid(colPlacement)) {
+                solveNQueens(n, row + 1, colPlacement, result);
+            }
+            colPlacement.remove(colPlacement.size() - 1);
+        }
+    }
+}
+
+// 새로운 위치에 놓인 퀸이 기존에 있던 다른 퀸들에게 잡아먹히는 상황이 오는지 확인한다.
+private static boolean isValid(List<Integer> colPlacement) {
+    int rowID = colPlacement.size() - 1;
+    for (int i = 0; i < rowID; i++) {
+        int diff = Math.abs(colPlacement.get(i) - colPlacement.get(rowID));
+        if (diff == 0 || diff == rowID - i) {
+            return false;
+        }
+    }
+    return true;
+}
+```
+
+시간 복잡도의 하한은 퀸을 놓을 수 있는 전체 경우의 수와 같다. n의 함수로 이를 정확히 표현하기는 어렵지만, $n!/c^n$으로 짐작하고 있다. $c \approx 2.54$로 복잡도가 지수 그 이상이다.
