add java epi 15.3

--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -130,3 +130,59 @@ private static boolean isValid(List<Integer> colPlacement) {
 ```
 
 시간 복잡도의 하한은 퀸을 놓을 수 있는 전체 경우의 수와 같다. n의 함수로 이를 정확히 표현하기는 어렵지만, $n!/c^n$으로 짐작하고 있다. $c \approx 2.54$로 복잡도가 지수 그 이상이다.
+
+## 문제 14.3 순열 구하기
+
+이번에는 배열의 모든 순열을 구하는 문제를 풀어 보자. 예를 들어 배열 <2,3,5,7>이 있을 때 그 결과는 (2, 3, 5, 7), (2, 3, 7, 5), (2, 5, 3, 7), (2, 5, 7, 3), (2, 7, 3, 5), (2, 7, 5, 3), (3, 2, 5, 7), (3, 2, 7, 5), (3, 5, 2, 7), (3, 5, 7, 2), (3, 7, 2, 5), (3, 7, 5, 2), (5, 2, 3, 7), (5, 2, 7, 3), (5, 3, 2, 7), (5, 3, 7, 2), (5, 7, 2, 3), (5, 7, 3, 2), (7, 2, 3, 5), (7, 2, 5, 3), (7, 3, 2, 5), (7, 3, 5, 2), (7, 5, 2, 3), (7, 5, 3, 2)가 된다. 결과의 순서는 상관하지 않는다.
+
+중복된 정수가 없는 배열이 입력으로 주어졌을 때, 모든 가능한 순열을 나열하는 프로그램을 작성하라. 같은 순열이 두 번 이상 등장하면 안 된다.
+
+> 힌트: 첫 번째 원소가 정해졌을 때, 얼마나 많은 경우의 수가 존재하는가?
+
+입력 배열을 A라고 하고 그 길이를 n이라고 하자. 무식한 방법은 A의 원소로 이루어진, 길이가 n인 배열을 전부 나열한 뒤 해당 배열이 A의 순열인지 확인하는 것이다. 이 문제는 A의 원소로 이루어진, 길이가 n-1인 배열을 모두 나열하는 문제와 비슷하므로 재귀를 사용하면 된다. 즉, 길이가 n-1인 배열을 모두 나열한 다음 배열의 끝에 숫자를 하나 추가하면 된다. 모든 가능한 배열이 $n^n$개이므로 시간 및 공간 복잡도가 매우 높다.
+
+이 방법을 좀 더 개선해 보자. 숫자 하나가 정해지면, 해당 숫자를 다시 사용할 필요가 없다. 즉, A의 모든 순열은 A[0], A[1],..., A[n-1]을 한 번씩만 사용한 결과이다. 모든 순열을 나열하는 방법은 먼저 A[0]으로 시작하는 모든 순열을 나열하고, 그 다음에 A[1]으로 시작하는 모든 순열을 나열하는 작업을 반복하면 된다. A[0]으로 시작하는 모든 순열을 나열하려면 A[1,n-1]의 모든 순열을 구해야 하므로 재귀를 떠올리게 된다. A[1]로 시작하는 모든 순열을 나열할 때는 A[1]과 A[0]을 맞바꾼 뒤 A[1,n-1]의 모든 순열을 계산한다. A[2]로 시작하는 모든 순열을 구할 때는 A 배열을 다시 원래 상태로 만든 뒤에 같은 방법으로 구한다.
+
+예를 들어 배열 <7,3,5>가 있을 때, 7로 시작하는 모든 순열을 나열해 보자. 그러기 위해선 <3,5>의 모든 순열을 구해야 한다. <3,5>의 모든 순열을 구하기 위해서는 3으로 시작하는 모든 순열을 구해야 한다. 부분배열 <5>의 길이는 1이므로 순열이 한 개 존재한다. 따라서 3으로 시작하는 <3,5>의 순열은 하나뿐이다. 그다음에는 <3,5>에서 5로 시작하는 순열을 구한다. 3과 5를 맞바꾼뒤 앞에서 했던 것처럼 순열을 찾아보면, <3,5>에서 5로 시작하는 순열은 <5,3> 한뿐이라는 사실을 알 수 있다. <7,3,5>에서 7로 시작하는 순열은 <7,3,5>와 <7,5,3> 두 개뿐이다. 이제 7과 3을 맞바꾼 뒤 3으로 시작하는 모든 순열을 구해 보자. <3,7,5>와 <3,5,7>이 된다. 5로 시작하는 순열도 <5,3,7>과 <5,7,3> 이렇게 두 개 있으므로 전체 순열은 6개가 된다.
+
+```java
+public static List<List<Integer>> permutations(List<Integer> A) {
+    List<List<Integer>> result = new ArrayList<>();
+    directedPermutations(0, A, result);
+    return result;
+}
+
+private static void directedPermutations(int i, List<Integer> A, List<List<Integer>> result) {
+    if (i == A.size() - 1) {
+        result.add(new ArrayList<>(A));
+        return;
+    }
+
+    // A[i]로 시작하는 모든 가능한 경우 찾기.
+    for (int j = i; j < A.size(); j++) {
+        Collections.swap(A, i, j);
+        // A.subList(i + 1, A.size())의 모든 가능한 순열 구하기.
+        directedPermutations(i + 1, A, result);
+        Collections.swap(A, i, j);
+    }
+}
+```
+
+시간 복잡도는 재귀 호출의 횟수에 의해 결정된다. 부분 호출을 제외하고 각 함수에서 사용한 시간은 $O(1)$이다. 함수 호출 횟수 $C(n)$은 $C(0) = 1$이고 $n \ge 1$일때, 재귀 $C(n) = 1 + nC(n-1)$을 충족한다. 이를 확장하면 $C(n) = 1 + n + n(n - 1) + n(n - 1)(n - 2) + ... + n! = n!(1/n! + 1/(n - 1)! + 1/(n - 2)! + ... + 1/1!)$이 된다. $(1 + 1/1! + 1/2! + ... + 1/n!)$을 구하면 오일러의 수 $e$가 되므로 $C(n) = (e - 1)n!$, 즉 $O(n!)$과 같다. 재귀 호출 말고도 $O(n)$의 연산을 수행하므로 $T(n)$의 시간 복잡도는 $O(n \times n!)$이 된다.
+
+이번에는 이 문제를 푸는 완전히 다른 알고리즘을 알아본다. 문제 5.11의 해법에서 어떤 순열이 주어졌을 때 그 다음 순열을 어떻게 효율적으로 구하는지 소개했다. 즉, <2,3,1,4>의 다음 순열은 <2,3,4,1>이 된다. 이 알고리즘을 사용해서 현재 문제를 풀 수 있다. 배열에서 n개의 서로 다른 원소를 1,2,3, ...으로 매핑한다. 1은 가장 작은 원소에 해당한다. 예를 들어 <7,3,5>를 정렬해서 <3,5,7>로 만든다. 문제 5.11의 해법을 사용해서 <3,5,7>의 다음 순열은 <3,7,5>가 되고, 그 다음 순열은 차례대로 <5,3,7>,<5,7,3>,<7,3,5>,<7,5,3>이 된다. 다음은 이를 구현한 프로그램이다.
+
+```java
+public static List<List<Integer>> permutations(List<Integer> A) {
+    List<List<Integer>> result = new ArrayList<>();
+    // 사전 순으로 처음 등장하는 순열을 구한다.
+    Collections.sort(A);
+    do {
+        result.add(new ArrayList<>(A));
+        A = NextPermutation.nextPermutations(A);
+    } while(!A.isEmpty());
+    return result;
+}
+```
+
+순열은 n!개이고 각 순열을 저장하는 데 $O(n)$의 시간을 사용하므로 전체 시간 복잡도는 $O(n \times n!)$이 된다.
