--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -131,7 +131,7 @@ private static boolean isValid(List<Integer> colPlacement) {
 
 시간 복잡도의 하한은 퀸을 놓을 수 있는 전체 경우의 수와 같다. n의 함수로 이를 정확히 표현하기는 어렵지만, $n!/c^n$으로 짐작하고 있다. $c \approx 2.54$로 복잡도가 지수 그 이상이다.
 
-## 문제 14.3 순열 구하기
+## 문제 15.3 순열 구하기
 
 이번에는 배열의 모든 순열을 구하는 문제를 풀어 보자. 예를 들어 배열 <2,3,5,7>이 있을 때 그 결과는 (2, 3, 5, 7), (2, 3, 7, 5), (2, 5, 3, 7), (2, 5, 7, 3), (2, 7, 3, 5), (2, 7, 5, 3), (3, 2, 5, 7), (3, 2, 7, 5), (3, 5, 2, 7), (3, 5, 7, 2), (3, 7, 2, 5), (3, 7, 5, 2), (5, 2, 3, 7), (5, 2, 7, 3), (5, 3, 2, 7), (5, 3, 7, 2), (5, 7, 2, 3), (5, 7, 3, 2), (7, 2, 3, 5), (7, 2, 5, 3), (7, 3, 2, 5), (7, 3, 5, 2), (7, 5, 2, 3), (7, 5, 3, 2)가 된다. 결과의 순서는 상관하지 않는다.
 
@@ -186,3 +186,64 @@ public static List<List<Integer>> permutations(List<Integer> A) {
 ```
 
 순열은 n!개이고 각 순열을 저장하는 데 $O(n)$의 시간을 사용하므로 전체 시간 복잡도는 $O(n \times n!)$이 된다.
+
+## 문제 15.4 멱집합 구하기
+
+S의 멱집합(power set)은 S의 공집합과 S를 포함한 모든 부분 집합과 같다. {0,1,2}의 멱집합을 그림으로 표현하면 그림 15.5와 같다.
+
+집합이 입력으로 주어졌을 때 멱집합을 반환하는 함수를 작성하라.
+
+> 힌트: 집합 S의 크기가 n일 때 부분 집합은 $2^n$이다. k비트의 모든 가능한 경우는 $2^k$이다.
+
+무식한 방법으로 시작해 보자. 특정 원소를 포함하지 않는 모든 부분 집합, U를 먼저 구한다(원소의 개수가 하나일 수도 있다). 그다음 해당 원소를 포함하는 모든 부분 집합, V를 구한다. 모든 부분 집합은 U 혹은 V에 포함되므로 최종 결과는 $U \cup V$가 된다. 재귀적으로 집합을 만들 수 있으며, 기저 사례는 입력 집합이 공집합인 경우, {{}}를 반환한다.
+
+예를 들어 S = {0,1,2}라고 하자. 임의의 원소, 예를 들어 0을 선택한다. 먼저 재귀적으로 {1,2}의 모든 부분 집합을 구한다. 먼저 1을 선택한 다음에 선택할 수 있는 집합은 {2}가 된다. 그 뒤에 2를 선택하면 공집합만 남게 되므로 기저 사례에 도달한다. {2}의 부분 집합은 {}와 {2}, 즉 {{},{2}}이다. 같은 이유로 {1,2}의 부분 집합은 {{},{2}}와 {{1},{1,2}} 즉 {{},{2},{1},{1,2}}가 된다. {0,1,2}의 부분 집합은 {{},{2},{1},{1,2}}와 {{0},{0,2},{0,1},{0,1,2}}, 즉 {{},{2},{1},{1,2},{0},{0,2},{0,1},{0,1,2}}가 된다.
+
+```java
+public static List<List<Integer>> generatePowerSet(List<Integer> inputSet) {
+    List<List<Integer>> powerSet = new ArrayList<>();
+    directedPowerSet(inputSet, 0, new ArrayList<Integer>(), powerSet);
+    return powerSet;
+}
+
+// inputSet[0], ..., inputSet[toBeSelected - 1]의 교집합이
+// selectedSoFar와 같은 부분 집합을 생성한다.
+private static void directedPowerSet(List<Integer> inputSet, int toBeSelected, List<Integer> selectedSoFar, List<List<Integer>> powerSet) {
+    if (toBeSelected == inputSet.size()) {
+        powerSet.add(new ArrayList<>(selectedSoFar));
+        return;
+    }
+    // inputSet[toBeSelected]를 포함하는 모든 부분 집합을 생성한다.
+    selectedSoFar.add(inputSet.get(toBeSelected));
+    directedPowerSet(inputSet, toBeSelected + 1, selectedSoFar, powerSet);
+    // inputSet[toBeSelected]를 포함하지 않는 모든 부분 집합을 생성한다.
+    selectedSoFar.remove(selectedSoFar.size() - 1);
+    directedPowerSet(inputSet, toBeSelected + 1, selectedSoFar, powerSet);
+}
+```
+
+재귀 호출의 횟수 $C(n) = 2C(n - 1)$과 같고 이를 풀어보면 $C(n) = O(2^n)$이 된다. 매번 $O(n)$의 시간을 사용하므로 전체 시간 복잡도는 $O(n2^2)$이 된다. 부분 집합의 개수가 $2^n$이고, 평균적으로 부분 집합의 크기가 n/2이므로 공간 복잡도도 $O(n2^n)$이 된다. 부분 집합을 전부 반환하지 않고 단순히 출력만 한다면, 부분 집합을 결과에 추가하지 않아도 되므로 공간 복잡도는 $O(n)$으로 줄어든다. 시간 복잡도는 변하지 않는다.
+
+S 집합에서 원소의 순서를 유지하려면, 길이가 n인 비트 배열 $2^n$개와 S의 부분 집합의 집합 사이에 일대일 상관관계를 만들 수 있다. 길이가 n인 비트 배열 v에서 1로 표기된 부분은 집합 S의 원소를 나타낸다. 예를 들어 S = {a,b,c,d}일 때 비트 배열이 <1,0,1,1>이라면, 이는 부분 집합 {a,c,d}를 뜻한다. 이를 사용하면 재귀를 사용하지 않고 부분배열을 모두 열거하는 알고리즘을 개발할 수 있다.
+
+즉, n이 컴퓨터 구조(혹은 언어)에서 허용하는 정수 비트의 개수보다 작거나 같다면 $[0,2^n-1]$의 숫자를 순회하면서 어떤 비트가 1로 세팅되어 있는지 확인한 뒤, 비트 배열을 만들 수 있다. 1로 세팅되어 있는 비트를 찾는 방법은 '4장 기본 자료형'에서 소개한 y = x & ~(x-1)을 통해 최하위 비트를 찾은 뒤 log y를 통해 그 인덱스를 구하는 것이다.
+
+```java
+public static List<List<Integer>> generatePowerSet(List<Integer> inputSet) {
+    List<List<Integer>> powerSet = new ArrayList<>();
+    for (int intForSubset = 0; intForSubset < (1 << inputSet.size()); intForSubset++) {
+        int bitArray = intForSubset;
+        List<Integer> subset = new ArrayList<>();
+        while (bitArray != 0) {
+            subset.add(inputSet.get(
+                (int)(Math.log(bitArray & ~(bitArray - 1)) / Math.log(2))
+            ));
+            bitArray &= bitArray - 1;
+        }
+        powerSet.add(subset);
+    }
+    return powerSet;
+}
+```
+
+각 집합을 구하는 데 $O(n)$ 시간이 걸리므로 전체 시간 복잡도는 $O(n2^n)$이 된다. 실무에서 이 방법은 굉장히 빠르다. 또한 전체 부분 집합을 반환하지 않고, 부분 집합을 단순히 열거한다면 공간 복잡도는 $O(n)$이 된다.
