add java epi 15.5

--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -247,3 +247,42 @@ public static List<List<Integer>> generatePowerSet(List<Integer> inputSet) {
 ```
 
 각 집합을 구하는 데 $O(n)$ 시간이 걸리므로 전체 시간 복잡도는 $O(n2^n)$이 된다. 실무에서 이 방법은 굉장히 빠르다. 또한 전체 부분 집합을 반환하지 않고, 부분 집합을 단순히 열거한다면 공간 복잡도는 $O(n)$이 된다.
+
+## 문제 15.5 크기가 k인 모든 부분 집합 생성하기
+
+일부 테스트 애플리케이션에서는 특정 집합의 크기가 주어졌을 때 모든 부분 집합을 구해야 되는 경우가 있다.
+
+k와 n이 입력으로 주어졌을 때, {1,2,...,n}의 부분 집합 중에서 크기가 k인 모든 부분 집합을 구하는 프로그램을 작성하라. 예를 들어 k=2이고 n=5일 때 그 결과는 {(1, 2), (1, 3), (1, 4), (1, 5), (2, 3), (2, 4), (2, 5), (3, 4), (3, 5), (4, 5)}가 된다.
+
+> 힌트: 재귀 함수의 서명(signature)을 어떻게 구성할지 생각해 보라.
+
+무식한 방법 중 하나는 {1,2,...,n}의 모든 부분 집합을 구한 뒤, 크기가 k인 부분 집합만 결과에 추가하는 것이다. 이 방법은 문제 15.4의 해법을 통해 모든 부분 집합을 구할 수 있으므로 편리한 점이 있다. 시간 복잡도는 k에 관계 없이 $O(n2^n)$이다. k가 n보다 많이 작거나 혹은 n에 근접하더라도 불필요한 부분 집합을 굉장히 많이 계산해야 한다.
+
+좀 더 효율적으로 문제를 풀기 위해선 문제에 초점을 맞춘 해법을 생각해 봐야 한다. 즉, 여기서는 케이스 분석이 유용할 수 있다. 부분 집합에는 두 가지 경우의 수가 존재한다. 1을 포함하지 않은 부분 집합과 1을 포함한 부분 집합이다. 첫 번째 경우에는 {2,3,...,n}}에서 크기가 k인 모든 부분 집합을 구하고, 두 번째 경우에는 {2,3,...,n}에서 크기가 k-1인 모든 부분 집합을 구한 뒤에 1을 더해 준다.
+
+예를 들어 n=4이고 k=2인 경우를 생각해 보자. {2,3,4}에서 크기가 2인 모든 부분 집합을 구하고 {2,3,4}에서 크기가 1인 모든 부분 집합을 구한 뒤 1을 마지막에 더해 준다. 결과는 이 두 부분 집합의 합집합인 {(2, 3), (2, 4), (3, 4)} $\cup$ {(1, 2), (1, 3), (1, 4)}가 된다.
+
+```java
+public static List<List<Integer>> combinations(int, int k) {
+    List<List<Integer>> result = new ArrayList<>();
+    directedCombinations(n, k, 1, new ArrayList<Integer>(), result);
+    return result;
+}
+
+private static void directedCombinations(int n, int k, int offset, List<Integer> partialCombination, List<List<Integer>> result) {
+    if (partialCombination.size() == k) {
+        result.add(new ArrayList<>(partialCombination));
+        return;
+    }
+
+    // 집합 {offset, ..., n-1}에서 크기가 numRemaining이 되는 남아 있는 조합을 생성한다.
+    final int numRemaining = k - partialCombination.size();
+    for (int i = offset; i <= n && numRemaining <= n - i + 1; i++) {
+        partialCombination.add(i);
+        directedCombinations(n, k, i + 1, partialCombination, result);
+        partialCombination.remove(partialCombination.size() - 1);
+    }
+}
+```
+
+시간 복잡도는 $O(n\binom{n}{k})$이다. 그 이유는 재귀적으로 멱집합을 모두 나열하는 해법과 비슷하다.(문제 15.4)
