--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -286,3 +286,65 @@ private static void directedCombinations(int n, int k, int offset, List<Integer>
 ```
 
 시간 복잡도는 $O(n\binom{n}{k})$이다. 그 이유는 재귀적으로 멱집합을 모두 나열하는 해법과 비슷하다.(문제 15.4)
+
+## 문제 15.6 괄호의 짝이 맞는 문자열 생성하기
+
+괄호의 짝이 맞는 문자열이란, 다음 세 가지 규칙에 의해 정의된다.
+
+- 빈 문자열, "",은 괄호의 짝이 맞는 문자열이다.
+- 짝이 맞는 문자열의 왼쪽 끝에 왼쪽 괄호를 추가하고 오른쪽 끝에 오른쪽 괄호를 추가한 문자열은 괄호의 짝이 맞는 문자열이다. 예를 들어 "(())()"은 짝이 맞는 문자열이므로 "((())())"도 짝이 맞는 문자열이다.
+- 짝이 맞는 문자열 두 개를 이어 붙인 문자열도 짝이 맞는 문자열이다. 예를 들어 "(())()"와 "()"는 짝이 맞는 문자열이므로 "(())()()"도 짝이 맞는 문자열이다.
+
+예를 들어 두 쌍의 괄호가 짝이 맞는 문자열 집합은 {(()),()()}이고, 세 쌍의 괄호가 짝이 맞는 문자열 집합은 {((())),(()()),(())(),()(()),()()()}}이다.
+
+숫자가 입력으로 주어졌을 때, 해당 숫자쌍의 괄호가 짝이 맞는 모든 문자열을 반환하는 프로그램을 작성하라.
+
+> 힌트: 괄호의 짝이 맞는 문자열의 접두사가 어떻게 생겼는지 생각해 보라.
+
+무식한 방법은 괄호의 개수가 2k인 모든 문자열을 나열하는 것이다. 괄호의 짝이 맞는지 확인하기 위해선 괄호의 종류를 하나로 설정한 뒤 문제 8.3의 해법을 사용하면 된다. 시간 복잡도의 하한인 $2^{2k}$만큼의 문자열이 가능하다. 왼쪽 괄호와 오른쪽 괄호의 개수가 같은 문자열만 나열한다고 하더라도 그 수는 $\binom{2k}{k}$에 이른다.
+
+문자열을 좀 더 직접적으로 나열한다면 시간 복잡도를 굉장히 개선할 수 있다. 예를 들어 ")"로 시작하는 문자열처럼, 어떤 문자열들은 절대 k개의 일치하는 괄호쌍이 있는 문자열로 완성될 수 없다. 따라서 문자열을 점차적으로 만들어 가는 방법이 있다. 잠재적으로 k개의 괄호쌍이 짝이 맞는 경우의 문자열만 만들 수 있도록 문자를 점차적으로 추가해 나간다.
+
+길이가 2k 이하인 문자열이 주어져 있고, 이 문자열은 잠재적으로 k개의 괄호쌍이 짝이 맞는 문자열이 될 수 있다고 가정하자. 문자열을 계속해서 짝이 맞는 문자열로 유지하려면 어떤 문자를 추가해야 할까?
+
+왼쪽 괄호를 추가하거나 오른쪽 괄호를 추가하는 두 가지 경우가 있다.
+
+- 왼쪽 괄호를 추가했을 때 k개의 일치하는 괄호쌍이 있는 문자열로 만들려면, 필요한 왼쪽 괄호의 개수가 0보다 커야 한다.
+- 오른쪽 괄호를 추가했을 때 k개의 일치하는 괄호쌍이 있는 문자열로 만들려면, 필요한 왼쪽 괄호의 개수가 필요한 오른쪽 괄호의 개수보다 작아야 한다(즉, 짝이 맞지 않는 왼쪽 괄호가 문자열에 존재해야 한다).
+
+실제 예제를 살펴보자. k=2일 때, 우리는 다음과 같은 문자열의 수열을 따라가게 된다. "", "(", "((", "(()", "(())", "()", "()(", "()()". 이 중에서 "(())"와 "()()"는 완성된 문자열이므로 결과에 추가한다.
+
+```java
+public static List<String> generateBalancedParentheses(int numPairs) {
+    List<String> result = new ArrayList<>();
+    directedGenerateBalancedParentheses(numPairs, numPairs, "", result);
+    return result;
+}
+
+private static void directedGenerateBalancedParentheses(
+    int numLeftParensNeeded,
+    int numRightParensNeeded,
+    String validPrefix,
+    List<String> result
+) {
+    if (numLeftParensNeeded == 0 && numRightParensNeeded == 0) {
+        result.add(validPrefix);
+        return;
+    }
+
+    if (numLeftParensNeeded > 0) { // '('를 추가할 수 있다.
+        directedGenerateBalancedParentheses(numLeftParensNeeded - 1,
+                                            numRightParensNeeded,
+                                            validPrefix + "(",
+                                            result);
+    }
+    if (numLeftParensNeeded < numRightParensNeeded) { // ')'를 추가할 수 있다.
+        directedGenerateBalancedParentheses(numLeftParensNeeded,
+                                            numRightParensNeeded - 1,
+                                            validPrefix + ")",
+                                            result);
+    }
+}
+```
+
+k개의 괄호쌍이 짝이 맞는 경우의 수 $C(k)$는 k가 증가할 때마다 굉장히 빠르게 증가한다. 정확히 말해서 $C(k+1) = \sum^{k}_{i=0}\binom{k}{i}/(k+1)$이 된다. 이 결과는 $\frac{(2k)!}{k!(k+1)!}$과 같다.
