--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -348,3 +348,57 @@ private static void directedGenerateBalancedParentheses(
 ```
 
 k개의 괄호쌍이 짝이 맞는 경우의 수 $C(k)$는 k가 증가할 때마다 굉장히 빠르게 증가한다. 정확히 말해서 $C(k+1) = \sum^{k}_{i=0}\binom{k}{i}/(k+1)$이 된다. 이 결과는 $\frac{(2k)!}{k!(k+1)!}$과 같다.
+
+## 문제 15.7 회문 분해하기
+
+앞으로 읽으나 뒤로 읽으나 결과가 같은 문자열을 회문이라 한다. 문자열 분해란 여러 문자열 집합으로 나뉜 문자열을 이어 붙였을 때 기존의 문자열이 되는 것을 말한다. 예를 들어 "611116"은 회문이고 "611", "11", "6"은 이 문자열을 분해한 결과이다.
+
+주어진 문자열을 회문 문자열로 분해한 모든 결과를 구하라. 예를 들어 입력 문자열이 "0204451881"이라 한다면 "020", "44", "5", "1881"로 분해된 문자열은 회문이고 "020", "44", "5", "1", "88", "1"로 분해된 문자열도 회문이다. 하지만 "02044", "5", "1881"로 분해된 문자열은 회문이 아니다.
+
+> 힌트: 분해된 문자열 중 첫 번째 회문 문자열에 집중하라.
+
+무식한 방법으로 접근해 보면, 문자열을 가능한 모든 방법으로 분해한 뒤 분해된 문자열이 회문인지 확인해 보면 된다. 문자열을 모든 가능한 방법으로 분해하려면 첫 번째 분해된 문자열 접두사의 길이를 1,2,...로 시도해 보고, 나머지 접미사 문자열을 통해 이 과정을 재귀적으로 반복하면 된다. 문자열의 길이가 n일 때 분해되는 문자열의 개수는 $2^{n-1}$이 된다. (모든 n-비트 벡터를 유일한 분해 방법이라고 이해하면 쉽다. 즉, 비트 벡터에서 연속된 1 혹은 연속된 0을 부분 문자열이라고 생각하자.)
+
+물론 이 무식한 방법은 회문이 아닌 문자열도 분해해 본다는 점에서 비효율적이다. 예를 들어 주어진 문자열이 "0204451881"이고, 처음 분해한 문자열이 "02"인 경우에도 나머지 문자열을 이용해서 재귀적으로 분해한다. 따라서 회문으로 시작하는 문자열만을 분해하는, 보다 직접적인 접근 방법이 필요하다.
+
+주어진 예제인 "0204451881"을 살펴보자. "0"이 회문이므로, 재귀적으로 "224451881"을 살펴보고, "020"이 회문이므로 재귀적으로 "4451881"을 살펴본다.
+"204451881"의 회문 분해를 구할 때는 "2"가 회문이 되는 접두사이므로 "04451881"을 재귀적으로 확인한다.
+"04451881"의 회문 분해를 구할 때는 "0"이 회문이 되는 접두사이므로 "4451881"을 확인한다.
+"4451881"의 회문 분해를 구할 때는 "4"가 회문이므로 "451881"을 재귀적으로 살펴보고, 또한 "44"가 회문이므로 "51881"을 살펴본다.
+
+```java
+public static List<List<String>> palindromePartitioning(String input) {
+    List<List<String>> result = new ArrayList<>();
+    directedPalindromePartitioning(input, 0, new ArrayList<String>(), result);
+    return result;
+}
+
+private static void directedPalindromePartitioning(
+    String input, int offset, List<String> partialPartition, List<List<String>> result
+) {
+    if (offset == input.length()) {
+        result.add(new ArrayList<>(partialPartition));
+        return;
+    }
+
+    for (int i = offset + 1; i <= input.length(); i++) {
+        String prefix = input.substring(offset, i);
+        if (isPalindrome(prefix)) {
+            partialPartition.add(prefix);
+            directedPalindromePartitioning(input, i, partialPartition, result);
+            partialPartition.remove(partialPartition.size() - 1);
+        }
+    }
+}
+
+private static boolean isPalindrome(String prefix) {
+    for (int i = 0, j = prefix.length() - 1; i < j; i++, j--) {
+        if (prefix.charAt(i) != prefix.charAt(j)) {
+            return false;
+        }
+    }
+    return true;
+}
+```
+
+최악의 경우의 시간 복잡도는 여전히 $O(n \times 2^n)$이다. 여기서 최악은 문자 하나로 이루어진, 길이가 n인 문자열이 입력으로 들어온 경우이다. 하지만 최선의 경우에는 시간 복잡도가 많이 줄어든다. 여기서 최선은 회문으로 분해되는 문자열이 많지 않은 경우다.
