--- a/java_epi/ch15/15.재귀.md
+++ b/java_epi/ch15/15.재귀.md
@@ -402,3 +402,39 @@ private static boolean isPalindrome(String prefix) {
 ```
 
 최악의 경우의 시간 복잡도는 여전히 $O(n \times 2^n)$이다. 여기서 최악은 문자 하나로 이루어진, 길이가 n인 문자열이 입력으로 들어온 경우이다. 하지만 최선의 경우에는 시간 복잡도가 많이 줄어든다. 여기서 최선은 회문으로 분해되는 문자열이 많지 않은 경우다.
+
+## 문제 15.8 이진 트리 생성하기
+
+노드의 개수가 주어졌을 때, 모든 가능한 이진 트리를 반환하는 프로그램을 작성하라. 예를 들어 노드가 세 개라면 그림 15.6에 나와 있는 트리를 반환하면 된다.
+
+> 힌트: 왼쪽 부분 트리 크기가 서로 다른, 두 개의 이진 트리가 동일할 수 있는가?
+
+무식한 방법은 노드가 n-1개 이하인 모든 이진 트리를 생성한 뒤에 노드가 n개인 이진 트리를 구한다. 루트 노드를 하나 두고 왼쪽 자식을 노드가 n-1개 이하인 이진 트리로 설정하고 오른쪽 자식을 노드가 n-1개 이하인 이진 트리로 설정한다. 왼쪽 자식과 오른쪽 자식이 모두 같은 경우가 없으므로 이렇게 생성된 모든 트리는 중복되지 않을 것이다. 하지만 이렇게 트리를 생성하면 어떤 경우에는 노드가 n-1개보다 적을 수도 있고, 어떤 경우에는 그것보다 많을 수도 있다.
+
+노드가 n개인 트리를 직접 탐색하면 더 효율적으로 구할 수 있다. 즉, 왼쪽 자식의 노드의 개수가 k개이면서 전체 노드가 n개인 이진 트리를 구하려면, 오른쪽 자식의 노드의 개수는 반드시 n-1-k여야 한다. 다시 말해 노드가 n개인 모든 이진 트리를 구하려면 노드의 개수가 i개인 모든 왼쪽 부분 트리를 구하고 노드가 n-1-i개인 모든 오른쪽 부분 트리를 구하면 된다. i는 0부터 n-1 사이의 값이 된다.
+
+그림 15.6을 자세히 살펴보면 처음 트리 두 개는 왼쪽 부분 트리의 크기가 0이고 오른쪽 부분 트리의 크기가 2라는 사실을 알 수 있다. 세 번째 트리는 왼쪽 부분 트리의 개수와 오른쪽 부분 트리의 개수가 1인 유일한 트리이다. 마지막 트리 두 개는 왼쪽 부분 트리의 크기가 2이고 오른쪽 부분 트리의 크기가 0인 트리이다. 두 노드에 있는 두 개의 트리 집합은 자체적으로 재귀로 계산할 수 있다. 한 노드에 단일 이진 트리가 있으며, 루트의 양쪽에 있을 수 있다.
+
+```java
+public static List<BinaryTreeNode<Integer>> generateAllBinaryTrees(int numNodes) {
+    List<BinaryTreeNode<Integer>> result = new ArrayList<>();
+    if (numNodes == 0) { // 비어 있는 트리이므로 null을 추가한다.
+        result.add(null);
+    }
+
+    for (int numLeftTreeNodes = 0; numLeftTreeNodes < numNodes; ++numLeftTreeNodes) {
+        int numRightTreeNodes = numNodes - 1 - numLeftTreeNodes
+        List<BinaryTreeNode<Integer>> leftSubtrees = generateAllBinaryTrees(numLeftTreeNodes);
+        List<BinaryTreeNode<Integer>> rightSubtrees = generateAllBinaryTrees(numRightTreeNodes);
+        // leftSubtrees와 rightSubtrees로 이루어진 모든 조합을 생성한다.
+        for (BinaryTreeNode<Integer> left : leftSubtrees) {
+            for (BinaryTreeNode<Integer> right : rightSubtrees) {
+                result.add(new BinaryTreeNode<>(0, left, right))
+            }
+        }
+    }
+    return result;
+}
+```
+
+재귀 함수에 대한 $C(n)$의 호출 수는 $C(n) = \sum^{n}_{i=1} C(n - i)C(i - 1)$을 만족한다. $C(n)$을 n번째 카탈란 수(Catalan number)라 한다. 이 값은 $\frac{(2n)!}{n!(n+1)!}$과 같다고 알려져 있다. 문제 15.6의 해법과 비교해 보면 값이 상당히 비슷한 것을 알 수 있다. 카탈란 수는 조합 문제에 자주 등장한다.
