--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -85,3 +85,33 @@ public static List<PairedTasks> optimumTaskAssignment(List<Integer> taskDuration
 ```
 
 시간 복잡도는 정렬하는 데 걸리는 시간인 $O(n \log n)$과 같다.
+
+## 문제 17.2 기다리는 시간을 최소화하기
+
+데이터베이스는 SQL 쿼리에 대한 응답을 반환해야 한다. 각 쿼리를 처리하는 데 걸리는 시간은 이미 알고 있다. 이 애플리케이션에서 데이터베이스는 임의의 순서대로 한번에 하나의 쿼리만 처리해야 한다. 따라서 각 쿼리를 처리하기 전에 기다리는 시간이 존재한다.
+
+각 쿼리를 처리하는 데 걸리는 시간이 주어졌을 때, 총 대기 시간이 최소화되려면 어떤 순서로 쿼리를 실행해야 하는지 알아보자. 예를 들어 각 쿼리를 처리하는 데 걸리는 시간이 <2,5,1,3>일 때, 이대로 쿼리를 처리하면 전체 기다리는 시간은 0 + (2) + (2 + 5) + (2 + 5 + 1) = 17이다. 하지만 가장 오래 걸리는 쿼리부터 시간이 감소하는 순서대로 처리한다면 기다리는 시간은 0 + (5) + (5 + 3) + (5 + 3 + 2) = 23이다. 아래에서 보겠지만, 가장 최소로 기다리는 시간의 합은 10이다.
+
+> 힌트: 극단적인 값에 초점을 맞추라.
+
+모든 가능한 스케줄을 나열한 뒤에 가장 적게 기다리는 것을 고르면 된다. 그런데 이 방법의 복잡도는 굉장히 높다. n개의 쿼리가 있을 때, $O(n!)$ 시간이 걸린다.
+
+직관적으로 생각하면 시간이 적게 걸리는 쿼리를 먼저 처리하는 게 나아 보인다. 왜냐하면 각 쿼리를 처리하는 데 걸리는 시간은 남아 있는 모든 쿼리의 기다리는 시간에 추가되기 때문이다. 따라서 시간이 오래 걸리는 쿼리가 시간이 적게 걸리는 쿼리 앞에 있을 때, 이를 맞바꾸면 이 둘 사이에 존재하는 모든 쿼리의 기다리는 시간을 줄일 수 있고, 다른 쿼리의 기다리는 시간에 영향을 미치지도 않는다. 물론 시간이 오래 걸리는 쿼리 자체의 기다리는 시간은 증가하지만, 그만큼 시간이 적게 걸리는 쿼리의 기다리는 시간이 줄어들어서 상쇄된다. 따라서 처리 시간이 증가하는 순서대로 쿼리를 정렬한 뒤 차례대로 실행하면 된다.
+
+주어진 예제에서 최적의 스케줄은 처리 시간이 증가하는 순서대로 쿼리를 배치했을 때이다. 따라서 전체 기다리는 시간은 0 + (1) + (1 + 2) + (1 + 2 + 3) = 10이 된다. 가장 오래 걸리는 쿼리부터 시간이 감소하는 순서대로 스케줄링한 결과는 최악의 방법이었다.
+
+```java
+public static int minimumTotalWaitingTime(List<Integer> serviceTimes) {
+    // serviceTimes을 증가하는 순서대로 정렬한다.
+    Collections.sort(serviceTimes);
+
+    int totalWaitingTime = 0;
+    for (int i = 0; i < serviceTimes.size(); i++) {
+        int numRemainingQueries = serviceTimes.size() - (i + 1);
+        totalWaitingTime += serviceTimes.get(i) * numRemainingQueries;
+    }
+    return totalWaitingTime;
+}
+```
+
+시간 복잡도는 정렬하는 데 걸리는 시간과 같은 $O(n \log n)$이다.
