add java epi 17.3

--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -115,3 +115,55 @@ public static int minimumTotalWaitingTime(List<Integer> serviceTimes) {
 ```
 
 시간 복잡도는 정렬하는 데 걸리는 시간과 같은 $O(n \log n)$이다.
+
+## 문제 17.3 모든 구간을 커버하기
+
+공장에서 몇 가지 업무를 책임져야 하는 현장감독을 생각해 보자. 각 업무는 정해진 시간에 시작해서 정해진 시간에 끝난다. 현장감독은 공장에 직접 방문해서 업무가 잘 돌아가는지 확인하고 싶어 한다. 여러분이 해야 할 일은 현장감독이 공장을 방문하는 횟수를 최소화하는 것이다. 현장감독은 매번 방문할 때마다, 현재 진행 중인 모든 업무를 확인한다. 현장감독은 특정 시간에 현장을 방문하고, 정확히 그 시간에 수행되는 업무만을 확인할 수 있다. 예를 들어 [0,3], [2,6], [3,4], [6,9]의 시간에 수행되는 업무 4개가 있을 때, 현장감독이 0,2,3,6시간에 방문하면 모든 업무를 확인할 수 있다. 하지만 3,6시간에만 방문해도 모든 업무를 확인할 수 있다. 이 문제를 추상화하면 다음과 같다.
+
+닫힌 구간의 집합이 주어졌을 때, 가장 적은 숫자로 모든 구간을 커버할 수 있는 알고리즘을 설계하라.
+
+> 힌트: 극단적인 입력값을 생각해 보라.
+
+각 구간의 끝에 있는 숫자만 고려해도 이 문제를 풀 수 있다는 사실을 기억하길 바란다. 무식한 방법은 모든 가능한 끝부분의 숫자의 부분 집합을 나열한 뒤, 해당 부분 집합이 모든 구간을 커버하는지 확인하는 것이다. 만약 모든 구간을 커버하고 현재의 부분 집합의 크기가 이전보다 작다면 그 결과를 갱신한다. 모든 부분 집합의 개수는 $2^k$이므로, 이 방법의 시간 복잡도는 굉장히 높다.
+
+간단하게 모든 구간의 왼쪽 끝지점을 반환해도 된다. 이렇게 하면 굉장히 빠르게 부분 집합을 구할 수 있지만 앞에서도 살펴봤듯이 그 결과가 항상 최소의 개수는 아니다. 이와 비슷하게, 가장 많은 구간을 지나치는 지점을 그리디하게 선택하더라도 그 결과가 부분최적이 될 가능성이 있다. 예를 들어 [1,2], [2,3], [3,4], [2,3], [3,4], [4,5]의 경우를 생각해 보자. 3은 여섯 개의 구간 중, 네 개의 구간에서 등장한다. 하지만 3을 선택한다면 [1,2]와 [4,5]를 커버하지 못하므로 추가로 두 개의 지점을 더 선택해야 한다. 그런데 2와 4 지점을 선택한다면, 각각 3개의 구간을 커버해서 단 두개의 지점으로 모든 구간을 커버할 수 있다.
+
+극단적인 경우에 초점을 두는 것이 좋다. 특히 첫 번째로 끝나는 지점, 즉 구간의 오른쪽 끝점의 위치가 가장 작은 것에 집중해 보자. 이 지점을 커버하기 위해서는 해당 구간을 지나는 부분을 선택해야 한다. 그중에서도 반드시 오른쪽 끝 지점을 선택해야 한다. 왜냐하면 그 앞의 어떤 지점을 선택하든지 끝 지점을 선택하는 것보다 더 나은 선택이 아니기 때문이다. (이게 참이 아니라면, 우리가 선택한 그 구간의 끝지점이 첫 번째로 끝나는 지점이 아니라는 뜻이 된다.) 끝 지점을 선택한 뒤에, 커버되는 모든 구간을 삭제한 뒤 남아 있는 구간들로 앞의 과정을 반복한다.
+
+앞의 과정을 다음 알고리즘으로 나타낼 수 있다. 모든 구간을 오른쪽 끝 지점을 기준으로 정렬한다. 첫 번째 구간의 오른쪽 끝 지점을 선택한다. 커버되지 않는 첫 번째 구간이 나올 때까지 정렬된 구간을 차례대로 순회한다. 커버되지 않는 구간을 발견하는 순간 해당 구간의 오른쪽 끝 지점을 선택하고 앞의 과정을 반복한다.
+
+[1,2],[2,3],[3,4],[2,3],[3,4],[4,5]의 예제가 있을 때, 이를 오른쪽 끝점을 기준으로 정렬하면 [1,2],[2,3],[2,3],[3,4],[3,4],[4,5]가 된다. 첫 번째 구간의 오른쪽 끝 지점은 2이고, 이 지점은 처음 세 개의 구간을 커버한다. 다음에 [3,4]를 만나게 되면 이 구간의 오른쪽 끝 지점인 4를 선택해서 [3,4],[3,4],[4,5]를 커버한다.  남아 있는 구간이 더 이상 없으므로 {2,4}가 모든 구간을 커버하는 가장 적은 숫자의 집합이 된다.
+
+```java
+public static class Interval {
+    public int left, right;
+
+    public Interval(int l, int r) {
+        this.left = l;
+        this.right = r;
+    }
+}
+
+public static Integer findMinimumVisits(List<Interval> intervals) {
+    // 오른쪽 끝점을 기준으로 구간을 정렬한다.
+    Collections.sort(intervals, new Comparator<Interval>(){
+        @Override
+        public int compare(Interval i1, Interval i2) {
+            return Integer.compare(i1.right, i2.right);
+        }
+    });
+    List<Integer> visits = new ArrayList<>();
+    Integer lastVisitTime = Integer.MIN_VALUE;
+    Integer numVisits = 0;
+    for (Interval interval : intervals) {
+        if (interval.left > lastVisitTime) {
+            // 현재의 오른쪽 끝점인 lastVisitTime은 더 이상 커버하는 구간이 없다.
+            lastVisitTime = interval.right;
+            ++numVisits;
+        }
+    }
+    return numVisits;
+}
+```
+
+각 인덱스에서 걸린 시간은 $O(1)$이므로 정렬을 한 이후에 걸린 시간은 총 $O(n)$이다. 여기서 n의 구간은 개수이다. 하지만 그전에 정렬을 해야 하므로 이 알고리즘의 전체 시간 복잡도는 정렬을 하는 데 필요한 $O(n \log n)$과 같다.
