add java epi 17.5

--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -241,3 +241,46 @@ public static boolean hasThreeSum(List<Integer> A, int t) {
 ```
 
 추가 공간 복잡도는 $O(1)$이다. 전체 시간 복잡도는 우선 정렬에 $O(n \log n)$ 시간이 소요된다. 그다음 정렬된 배열에서 두 원소의 합이 특정값이 되는지 확인하는 $O(n)$을 n번 수행하므로 $O(n^2)$이 된다.
+
+## 문제 17.5 다수 원소 찾기
+
+어떤 애플리케이션에서는 주어진 수열에서 일정 비율보다 많이 등장하는 원소를 찾아야 하는 경우가 발생한다. 예를 들어 네트워크 대역폭을 과도하게 사용하거나 HTTP 요청을 가장 많이 한 사용자를 찾아내고 싶을 수 있다. 이를 간단하게 표현한 다음 문제를 생각해 보자.
+
+어떤 문자열을 읽고 있다고 가정하자. 특정 문자가 문자열의 절반 이상에서 등장한다. 이 문자를 '다수(majority) 원소'라고 부르자. '다수 원소'가 있다는 건 알지만, 문자열 내의 위치까지는 알지 못한다. 문자열이 스트리밍 형태로 입력된다고 했을 때, 한 번만 읽어서 어떤 원소가 '다수 원소'인지 확인하는 프로그램을 작성하라. 예를 들어 입력이 <b,a,c,a,a,b,a,a,c,a>라면 a가 '다수 원소'가 된다(10번 중 6번 등장했으므로).
+
+> 힌트: 입력에 '다수 원소'가 있다는 사실을 미리 알고 있으므로 이를 바탕으로 다수가 아닌 원소를 제거해 나가보자.
+
+무식한 방법은 해시 테이블에 해당 원소가 몇 번이나 반복됐는지 기록하는 것이다. 이 방법은 원소의 개수가 n개일 때 시간 복잡도가 $O(n)$이고 공간 복잡도 또한 $O(n)$이다.
+
+무작위 샘플링 방법은 적은 공간으로 다수 원소를 찾는 데 종종 쓰인다. 정확도가 높은 편이지만 완벽하진 않다.
+
+더 나은 알고리즘에 대한 생각은 다음과 같다. 원소들을, 다수 원소로 구성된 그룹과 그렇지 않은 그룹으로 나눈다. 다수 원소로 구성된 그룹이 두 번째 그룹의 크기보다 크고 다수 원소는 단 하나뿐이므로, 서로 다른 원소 두 개를 임의로 선택했을 떄 최대 하나의 원소가 다수 원소가 될 수 있다. 두 원소를 모두 제거하더라도 첫 번째 그룹과 두 번째 그룹의 크기 차이는 동일하게 유지되므로 다수 원소는 남아 있는 항목들에서 변하지 않고 그대로 유지된다.
+
+이 알고리즘은 다음과 같이 진행된다. 엔트리를 순회하면서 다수 원소 후보자와 그 후보자가 몇 번 등장했는지 개수를 센다. 다수 원소 후보자는 첫 번째 엔트리로 초기화한다. 남아 있는 엔트리를 순회하면서 현재 후보자와 같은 엔트리를 발견하면 그 개수를 증가시킨다. 만약 후보자와 다른 엔트리를 만나면 개수를 감소시킨다. 카운트된 개수가 0이 되면 후보자를 그 다음 엔트리로 바꾼다.
+
+이를 수학적으로 증명해 보자. n개의 엔트리에서 다수 원소가 m번 등장했다고 하자. 다수 원소의 정의대로 $\frac{m}{n} > \frac{1}{2}$가 된다. 서로 다른 두 개의 원소를 선택했을 때 둘 다 다수 원소가 될 수는 없다. 둘 중 하나가 다수 원소인 경우에 이 둘을 삭제했을 때 전체 원소에 대한 다수 원소의 비율은 $\frac{(m-1)}{(n-2)}$이 되고, 둘 다 다수 원소가 아니라면 그 비율이 $\frac{m}{n-2}$이 된다. $\frac{m}{n} > \frac{1}{2}$일 때 $\frac{m}{(n-2)} > \frac{1}{2}$이고 $\frac{(m-1)}{(n-2)} > \frac{1}{2}$을 증명하는 건 간단하다.
+
+앞에서 나온 예제인 <b,a,c,a,a,b,a,a,c,a>를 살펴보자. 먼저 다수 원소를 b로 초기화한다. 그 다음 원소인 a와 b가 다르므로 다수 원소의 개수는 0이 된다. 따라서 그 다음 원소인 c를 다수 원소 후보자로 선택하고 그 개수를 1로 설정한다. 그 다음 원소가 a이므로 다수 원소의 개수를 0으로 감소한다. 이제 a가 새로운 후보자가 되었다. 하지만 그 다음 원소인 a를 다시 새로운 후보자로 설정한다. 이 후보자의 개수는 마지막까지 0보다 크기 때문에 a가 최종 다수 원소가 된다.
+
+```java
+public static String majoritySearch(Iterator<String> inputStream) {
+    String candidate = "";
+    int candidateCount = 0;
+    while (inputStream.hasNext()) {
+        String it = inputStream.next();
+        if (candidateCount == 0) {
+            candidate = it;
+            candidateCount = 1;
+        } else if (candidate.equals(it)) {
+            ++candidateCount;
+        } else {
+            --candidateCount;
+        }
+    }
+    return candidate;
+}
+```
+
+각 엔트리를 처리하는 데 $O(1)$의 시간을 사용하므로 전체 시간 복잡도는 $O(n)$이다. 추가 공간 복잡도는 $O(1)$이다.
+
+앞의 코드는 다수 원소가 언제나 존재한다는 가정하에 동작한다. 만약 다수 원소가 존재하지 않는다면, 앞에서 반환하는 결과는 아무 의미 없는 결과일 것이다. 마지막에 한 번 더 입력을 읽으면서 해당 단어가 다수 원소인지 확인하는 과정을 넣을 수도 있다. 문제 24.33에서도 이야기했듯이, 입력에서 n/k번보다 많이 등장하는 원소를 찾을 때도 비슷한 방법을 사용하면 된다.
