add java epi 17.7,17.8

--- a/java_epi/ch17/17.그리디 알고리즘과 불변식.md
+++ b/java_epi/ch17/17.그리디 알고리즘과 불변식.md
@@ -318,3 +318,104 @@ private static final int MPG = 20;
 ```
 
 시간 복잡도는 $O(n)$이고 공간 복잡도는 $O(1)$이다.
+
+## 문제 17.7 수직선 쌍에 담을 수 있는 물의 최대 양 구하기
+
+x=0에서 시작하는 Y축에 평행한 수직선의 집합을 표현한 정수 배열이 있다. 그림 17.4(a)를 살펴보자. 이 문제의 목적은 X축에 위치한 가장 많은 물을 담을 수 있는 수직선의 쌍을 구하는 것이다. 그림 17.4(b)에 그 예제가 나와 있다.
+
+정수 배열이 주어졌을 때 물을 최대로 담을 수 있는 수직선 쌍을 반환하는 프로그램을 작성하라.
+
+> 힌트: 0과 n-1을 시작점으로 해서 이동하라.
+
+A를 배열이라고 하고 그 길이를 n이라 하자. 간단하게 생각할 수 있는 무식한 방법으로는 $O(n^2)$ 해법이 있다. i < j의 쌍 (i,j)에 대해 $(j-i) \times \min{A[i], A[j]}$ 사이에 물을 담을 수 있는지 확인한다. 물을 담을 수 있는지 확인하는 과정은 $O(1)$ 시간에 해결할 수 있다. 물을 담을 수 있는 $(i,j)$ 쌍 중에 최댓값이 최종 해법이 된다.
+
+시간 복잡도를 개선하기 위해 분할 정복법을 생각해 볼 수 있다. A의 왼쪽 절반, A의 오른쪽 절반, 그리고 A의 중간 지점에 걸쳐서 담을 수 있는 물의 최대양을 구할 수 있다. 중간 지점에 걸쳐서 담을 수 있는 최대양을 구할 때는 왼족 절반의 n/2개와 오른쪽 절반의 n/2개의 조합을 통해 구할 수 있다. 따라서 이 분할 정복법의 시간 복잡도 $T(n) = 2T(n/2) + O(n^2/4)$가 되고, 따라서 $T(n) = O(n^2)$이다. 이 방법은 무식한 방법보다 나은 점이 없고 코딩하기도 까다롭다.
+
+좋은 시작점은 가장 넓은 폭인 0과 n-1을 고려하는 것이다. 여기에 담을 수 있는 최대 양, 즉 $((n-1)-0) \times \min{(A[0], A[n-1])}$을 기록한다. $A[0] > A[n-1]$이라면, k > 0인 경우 k와 n-1 사이에 담은 물은 0과 n-1 사이에 담은 물보다 적다. 따라서 앞으로는 0과 n-2 사이에 담을 수 있는 물의 양에 집중하면 된다. $A[0] \le A[n-1]$인 경우에는 반대다. 이때는 0을 다시 고려할 필요가 없다.
+
+이를 반복적으로 적용하면서 최대로 담을 수 있는 물의 양을 기록하고, 반드시 고려해야 할 부분배열의 범위를 좁혀나간다. 본질적으로 너비와 높이를 절충할 수 있는 가장 좋은 방법을 찾는 것이다.
+
+```java
+public static int getMaxTrappedWater(List<Integer> heights) {
+    int i = 0, j = heights.size() - 1, maxWater = 0;
+    while (i < j) {
+        int width = j - i;
+        maxWater = Math.max(maxWater, width * Math.min(heights.get(i), heights.get(j)));
+        if (heights.get(i) > heights.get(j)) {
+            --j;
+        } else {
+            ++i;
+        }
+    }
+    return maxWater;
+}
+```
+
+반복적으로 수직선을 하나 혹은 두 개씩 제거해 나가고, 매번 $O(1)$의 시간을 사용하므로 전체 시간 복잡도는 $O(n)$이 된다.
+
+## 문제 17.8 스카이라인에서 가장 큰 직사각형 구하기
+
+인접하게 배열된 건물의 리스트가 주어져 있다. 각 건물은 일정한 단위 폭과 높이를 가지고 있다. 이 건물들이 도시의 스카이라인을 표현한다고 했을 때, 어떤 건축사가 이 스카이라인에 포함되는 가장 큰 직사각형의 면적을 알고싶어 한다. 그림 17.5에 예제가 표현되어 있다.
+
+일정한 폭을 가지는 인접한 건물들의 높이를 나타내는 배열 A가 있다고 하자. 스카이라인 안에서 면적이 가장 넓은 직사각형을 구하는 알고리즘을 설계하라.
+
+> 힌트: i번째 건물의 높이가 A[i]일 때, 이 건물을 포함하면서 넓이가 가장 넓은 직사각형을 어떻게 효율적으로 찾을 수 있을까?
+
+무식한 방법은 모든 (i,j) 쌍에 대해 A[i,j]의 부분배열에서 높이가 가장 작은 건물을 구한 뒤 이 높이에 j-1+1을 곱하는 것이다. A의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n^3)$이 된다. 이 방법은 $j > i$인 j를 순회할 때 현재까지의 가장 낮은 높이를 저장해 나간다면 $O(n^2)$으로 손쉽게 개선할 수 있다. 하지만 이 방법으로는 $O(n^2)$보다 더 개선할 만한 여지가 보이지 않는다.
+
+또 다른 무식한 방법은 모든 i에 대해 A[i]의 높이보다 낮은 건물이 나올 때까지 왼쪽과 오른쪽을 확장해 나가는 것이다. 본질적으로 가장 큰 직사각형의 기둥 역할을 하는 어떤 건물 i를 찾는 과정이다. 앞의 예제에서 G를 기둥으로 하는 가장 큰 직사각형은 1과 11사이의 직사각형이고, F를 기둥으로 하는 가장 큰 직사각형은 3과 6 사이의 직사각형이다.
+
+i번째 건물을 포함하는 가장 큰 직사각형은 i를 기준으로 왼쪽 오른쪽으로 한 번씩 순회하면서 손쉽게 찾을 수 있다. 0과 n-1 사이의 모든 i에 대해 앞의 과정을 수행해야 하므로 이 방법의 시간 복잡도는 $O(n^2)$이다.
+
+이 방법은 시간 복잡도를 개선할 여지가 보인다. 즉, 어떤 건물을 기준으로 왼쪽과 오른쪽으로 순회하는 경우를 생각해 보자. i번째 건물을 처리한다고 했을 때, 오른쪽으로 얼마나 순회해야 하는지 알지 못한다. 하지만 왼쪽에 있는 건물들 중 A[i]보다 높이가 높았기 때문에 i를 넘어서 더 이상 확장을 하지 못했던 건물들은 알 수 있다. 예를 들어 그림 17.5에서 B,D,E(F보다 건물의 높이가 높은 건물들)는 F를 넘어서 확장하지 못했던 건물들이다.
+
+예제를 좀 더 자세히 살펴보면, F가 기준일 때 B는 더 이상 고려할 필요가 없다는 것을 알 수 있다. 왜냐하면 그 사이에 위치한 C가 이미 건물 B의 확장을 방해했기 때문이다. C 또한 고려할 필요가 없다. 왜냐하면 G의 높이가 C의 높이와 같고 G가 C의 확장을 방해하지 않았으므로 G와 C를 포함한 가장 큰 직사각형은 같을 것이기 때문이다. 이를 일반화하면, 건물을 하나씩 살펴보면서 아직 확장을 방해받지 않은 건물들을 추적하는 작업이 필요하다. 또한, 현재 건물과 높이가 같은 이전의 건물들을 추적하는 작업이 필요하다. 또한, 현재 건물과 높이가 같은 이전의 건물을 현재 건물로 교체할 수 있다. 이러한 건물들을 유효한 건물 기둥 집합이라고 하자.
+
+초기에 유효한 건물 기둥 집합은 존재하지 않는다. 0에서 12까지 순회하면서 유효한 건물 기둥 집합은 다음과 같이 변한다.
+{A},
+{A,B},
+{A,C},
+{A,C,D},
+{A,C,D,E},
+{A,C,F},
+{A,G},
+{A,G,H},
+{A,G,I},
+{A,G,J},
+{A,K},
+{L},
+{L,M}
+
+건물이 유효한 건물 기둥 집합에서 제거될 때마다 해당 건물이 오른쪽으로 얼마 만큼 확장되었는지 알 수 있다. 예를 들어 C에 도달했을 때 B를 기둥으로 하는 직사각형은 2에서 끝났고, F에 도달했을 떄 D와 E를 기둥으로 하는 직사각형은 5에서 끝났다.
+
+유효한 건물 기둥 집합에서 건물을 제거했을 때, 해당 건물을 기준으로 왼쪽으로 얼마만큼 확장했는지 어떻게 찾을 수 있을까? 단순하게 건물 기둥 집합에서 해당 건물보다 낮은 건물 중에 가장 가까운 건물이 무엇인지 찾아보면 된다. 예를 들어 우리가 F에 도달했을 때 유효한 건물 기둥 집합은 {A,C,D,E}가 된다. E와 D가 F보다 높이가 높으므로 집합에서 삭제한다. E가 기둥이 되는 가장 큰 직사각형의 높이는 6이고 D 이후, 즉 4 위치에서 시작하므로 그 넓이는 $6 \times (5-4)=6$이 된다. D가 기둥이 되는 가장 큰 직사각형의 높이는 5이고 C 이후, 즉 3 위치에서 시작하므로 그 넓이는 $5 \times (5-3)=10$이 된다.
+
+유효한 건물 기둥 집합을 저장하는 여러 가지 자료구조가 존재한다. 그중에서 기 알고리즘을 효율적으로 구현할 수 있는 자료구조를 사용해야 한다. 새로운 건물을 처리할 때, 확장이 불가능한 건물을 유효한 건물 기둥 집합에서 찾아야 한다. 유효한 건물 기둥 집합에 건물을 삽입하거나 집합에서 건물을 삭제할 때 후입선출법을 사용하므로, 이 집합을 유지하는 데는 스택 자료구조를 선택하는 게 합리적이다. 유효한 건물 기둥 집합에서 가장 오른쪽에 있는 건물이 스택의 가장 위에 있다. 스택을 사용하면 왼쪽으로 얼마나 확장 가능하지를 확인할 떄도 유용하다. 스택에 들어 있는 건물을 차례대로 살펴보면 된다. 예를 들어 F를 처리한다고 했을 때 스택에는 A,C,D,E가 차례로 들어 있다. F와 E의 높이를 비교하면 E가 F에 의해 확장을 방해받으므로(즉, E의 높이가 F의 높이보다 높으므로) E를 기둥으로 하는 직사각형은 5까지 확장할 수 있다. 그 다음 건물은 D가 된다. D의 높이는 E의 높이보다 낮으므로 E를 기둥으로 하는 건물은 D의 끝점인 4에서 시작한다는 사실을 알 수 있다.
+
+알고리즘이 거의 완성되었다. 남은 건 순회가 끝나는 시점에서 어떻게 해야 할지에 대한 부분이다. 순회가 끝났을 때, 스택에 최소한 마지막 건물이 들어 있을 것이므로 스택은 비어 있지 않은 상태다. 앞에서 설명한대로 이 건물을 처리하면 된다. 다만 마지막까지 남아 있는 건물을 기둥으로 하는 직사각형의 오른쪽 끝은 항상 n이다. 여기서 n은 배열의 건물 개수를 말한다. 앞의 예제에서 L과 M은 마지막까지 스택에 남아 있는 건물이고, 이들을 기둥으로 하는 직사각형의 오른쪽 끝점은 13이다.
+
+```java
+public static int calculateLargestRectangle(List<Integer> heights) {
+    Deque<Integer> pillarIndices = new ArrayDeque<>();
+    int maxRectangleArea = 0;
+    // heights.size() - 1이 아닌 heights.size()만큼 순회를 한다.
+    // 그렇게 해야 직사각형의 넓이를 균일하게 처리할 수 있다.
+    for (int i = 0; i <= heights.size(); i++) {
+        while (!pillarIndices.isEmpty() && isNewPillarOrReachEnd(heights, i, pillarIndices.peekFirst())) {
+            int height = heights.get(pillarIndices.removeFirst());
+            int width = pillarIndices.isEmpty() ? i : i - pillarIndices.peekFirst() - 1;
+            maxRectangleArea = Math.max(maxRectangleArea, height * width);
+        }
+        pillarIndices.addFirst(i);
+    }
+    return maxRectangleArea;
+}
+
+private static boolean isNewPillarOrReachEnd(List<Integer> heights, int currIdx, int lastPillarIdx) {
+    return currIdx < heights.size()
+        ? heights.get(currIdx) < heights.get(lastPillarIdx)
+        : true;
+}
+```
+
+시간 복잡도는 $O(n)$이다. 건물을 처리할 때 각 건물에서 사용한 시간은 스택에 삽입한 건물과 스택에서 제거한 건물의 개수에 비례한다. 어떤 건물에서는 여러 번의 삭제를 수행하지만, 전체 수행한 삽입과 삭제의 횟수는 각각 n이다. 왜냐하면 각 건물 i는 최대 한 번 스택에 삽입될 것이고, 스택에서 삭제되는 횟수가 하나 이상이 될 수 없기 때문이다. 스택에 남아 있는 원소를 처리하는 데 필요한 시간 복잡도 또한 $O(n)$이 된다. 왜냐하면 결국 스택에 남게 될 원소의 개수는 $O(n)$이고 각 원소를 처리하는 데 $O(1)$ 시간이 걸리기 때문이다. 따라서 전체 시간 복잡도는 $O(n)$이 된다. 스택에 최대로 들어갈 원소의 개수는 n개이므로 전체 공간 복잡도는 $O(n)$이 된다. 스택에 n개의 원소가 들어갈 경우는 건물의 높이가 증가하는 순서대로 입력될 때이다.
