add java epi 18.1

--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -88,3 +88,90 @@ private static boolean isReachableDFS(Map<String, Set<String>> graph, String cur
 
 깊이 우선 탐색과 너비 우선 탐색은 추가로 알 수 있는 정보가 다르다. 예를 들어 너비 우선 탐색은 시작 지점에서의 거리를 계산할 때 쓰이지만, 깊이 우선 탐색은 사이클이 존재하는지 확인할 때 쓰인다. 깊이 우선 탐색의 핵심 개념에는 노드의 탐색 시간과 종료 시간 개념이 포함된다.
 
+## 문제 18.1 미로 찾기
+
+공간 문제를 마주한다면 그래프 모델 및 알고리즘을 떠올리게 된다. 흑백 이미지로 이루어진 미로를 생각해 보자. 흰색 픽셀은 열린 공간이고 검은색 픽셀은 벽을 뜻한다. 특별한 흰색 픽셀이 두 개 존재하는데, 하나는 입구이고, 하나는 출구이다. 입구에서 시작해서 출구로 빠져나가는 경로가 존재하는지 확인해 보자. 자세한 내용은 그림 18.5를 참조하길 바란다.
+
+미로를 나타내는 흑백의 2차원 배열이 주어졌을 때, 입구에서 출구로 빠져나가는 경로를 출력하라. 문제에서 입구와 출구도 주어진다.
+
+> 힌트: 미로를 그래프로 모델링하라.
+
+무식한 방법은 입구에서 출구로의 모든 가능한 경로를 나열하는 것이다. 하지만 문제 16.3의 해법에서도 알 수 있듯이 가능한 모든 경로의 개수는 천문학적으로 많다. 검은색 픽셀을 만나는 순간 멈추어 가지치기를 할 수도 있지만, 최악의 경우에 가능한 모든 경로를 나열하는 방법은 여전히 아주 비효율적이다.
+
+또 다른 방법은 흰색 픽셀에서 시작해서 임의의 인접한 흰색 픽셀로 무작위로 이동하는 것이다. 시간이 충분하다고 했을 때, 이렇게 하면 경로를 찾을 수 있다. 하지만 이 방법은 같은 장소를 반복해서 방문하므로 진행이 더딜 수 있다. 이때 이미 방문한 장소를 기록해 놓으면 무작위로 이동하는 알고리즘을 좀 더 개선할 수 있다. 이것이 바로 알고리즘의 진행을 확실히 보장하기 위해 싶이 우선 탐색과 너비 우선 탐색이 하는 일이다.
+
+이러한 사실에 기반하여 미로를 그래프로 모델링할 수 있다. 각 노드는 흰색 픽셀이 된다. 픽셀의 위치에 따라 노드에 번호를 매길 수 있다. 즉, $v_{i,j}$는 2차원 배열의 (i,j)를 나타낸다. 간선은 인접한 두 흰색 픽셀을 나타낸다.
+
+이제 입구에서부터 깊이 우선 탐색을 시작할 것이다. 깊이 우선 탐색 중간에 출구를 발견한다면, 입구에서 출구까지의 경로가 존재한다고 볼 수 있다. 깊이 우선 탐색을 재귀로 구현하면 호출 스택에 들어 있는 모든 노드가 입구에서 출구로의 경로가 될 것이다.
+
+이 문제는 너비 우선 탐색으로 풀 수도 있다. 물론 같은 그래프 모델링 방법을 사용하며 시작 지점 또한 동일하다. 너비 웃건 탐색 트리의 속성 중 하나는 발견된 경로가 최단 경로라는 점이다. 하지만 깊이 우선 탐색보다 구현하기 더 어려운 부분이 있다. 깊이 우선 탐색의 경우에는 컴파일러가 암묵적으로 깊이 우선 탐색 스택을 자동으로 처리해주는 반면, 너비 우선 탐색의 경우에는 명시적으로 큐(queue)를 사용하는 코드를 직접 써 줘야 하기 때문이다. 여기서는 최단 경로를 찾을 필요가 없기 때문에 깊이 우선 탐색을 사용하는 것이 더 낫다.
+
+```java
+public static class Coordinate {
+    public int x, y;
+
+    public Coordinate(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == 0) {
+            return true;
+        }
+
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+
+        Coordinate that = (Coordinate) o;
+        if (x != that.x || y != that.y) {
+            return false;
+        }
+        return true;
+    }
+}
+
+public static enum Color { WHITE, BLACK }
+
+public static List<Coordinate> searchMaze(List<List<Color>> maze, Coordinate s, Coordinate e) {
+    List<Coordinate> path = new ArrayList<>();
+    if (!searchMazeHelper(maze, s, e, path)) {
+        return Collections.EMPTY_LIST; // s에서 e로의 경로가 없다.
+    }
+    return path;
+}
+
+// 가능한 경로를 찾기 위해 깊이 우선 탐색을 수행한다.
+private static boolean searchMazeHelper(List<List<Color>> maze, Coordinate cur, Coordinate e, List<Coordinate> path) {
+    if (!isFeasible(cur, maze)) {
+        return false;
+    }
+    path.add(cur);
+    maze.get(cur.x).set(cur.y, Color.BLACK);
+    if (cur.equals.(e)) {
+        return true;
+    }
+
+    final int[][] SHIFT = {{0,1},{1,0},{0,-1},{-1,0}};
+    for (int[] s : SHIFT) {
+        if (searchMazeHelper(maze, new Coordinate(cur.x + s[0], cur.y + s[1]), e, path)) {
+            return true;
+        }
+    }
+
+    // 경로를 찾을 수 없으므로, path.add(cur)에 추가된 항목을 제거한다.
+    path.remove(path.size() - 1);
+    return false;
+}
+
+// cur가 maze 안에 있는지, 그리고 흰색 픽셀 위에 있는지 확인한다.
+private static boolean isFeasible(Coordinate cur, List<List<Color>> maze) {
+    return cur.x >= 0 && cur.x < maze.size()
+           && cur.y >= 0 && cur.y < maze.get(cur.x).size()
+           && maze.get(cur.x).get(cur.y) == Color.WHITE;
+}
+```
+
+시간 복잡도는 깊이 우선 탐색과 같다. $O(|V| + |E|)$이다.
