add java epi 18.4

--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -339,3 +339,56 @@ private static void markBoundaryRegion(int i, int j, List<List<Character>> board
 ```
 
 시간 및 공간 복잡도는 너비 우선 탐색과 같은 $O(mn)$이다. 여기서 m은 A의 행, n은 열을 나타낸다.
+
+## 문제 18.4 데드락 찾기
+
+고성능 데이터베이스 시스템은 다중 프로세스를 사용하며 필요할 경우 리소스에 락(lock)을 건다. 이러한 시스템은 반드시 데드락을 감지할 수 있어야 하며 데드락에 빠졌을 때 이를 복구하는 알고리즘 또한 구현되어 있어야 한다. 데드락(deadlock)이란 둘 이상이 동시에 상대방이 종료되길 기다림으로써 진행이 멈춰버린 상황을 말하며, 보통 여러 스레드에서 공유하는 리소스에 락을 잘못 설정했을 때 발생한다.
+
+데드락을 감지하는 한 가지 알고리즘은 '기다리는' 그래프를 사용해서 어떤 프로세스가 다른 어떤 프로세스에 의해 진행이 막혀 있는지 확인하는 방법이다. 기다리는 그래프에선 각 프로세스가 노드이며 P에서 Q로의 간선은 P에게 필요한 리소스를 Q가 현재 사용 중이라는 뜻이다. 즉, Q가 리소스에 걸린 락을 해제하기를 P가 기다린다는 뜻이다. 이 그래프에서 사이클이 존재한다면 데드락이 발생했을 가능성이 있다. 따라서 다음 문제를 생각해 볼 수 있다.
+
+방향 그래프가 주어졌을 때 해당 그래프에 사이클이 포함되어 있는지 확인하는 프로그램을 작성하라.
+
+> 힌트: '뒷'간선에 집중하라.
+
+깊이 우선 탐색을 사용해서 G에 사이클이 존재하는지 확인할 수 있다. 깊이 우선 탐색은 색깔을 사용해서 각 노드의 상태를 표현했다. 초기에는 모든 노드를 흰색으로 칠한다. 어떤 노드를 만나면 해당 노드를 회색으로 칠한다. 마지막으로 모든 처리가 끝나서 깊이 우선 탐색이 더 이상 방문하지 않을 노드는 검은색으로 칠한다.
+
+회색 노드에서 회색 노드로의 간선을 발견하는 순간, G에는 사이클이 존재한다는 뜻이므로 탐색을 멈춘다. 이 말은 사이클이 존재할 경우 사이클의 첫 번째 노드(v라 하자)를 방문한 뒤 v에 대한 처리가 끝나기 전에 v의 이전 노드(u라 하자)를 만나게 되고, 따라서 회색 노드에서 회색 노드로의 간선이 존재한다는 뜻이 된다. 정리하자면 깊이 우선 탐색이 회색 노드에서 회색 노드로의 간선을 발견했을 때만 사이클이 존재한다. 그래프가 강하게 연결되어 있지 않을 수 있으므로 방문하지 않은 모든 노드에 대해서 깊이 우선 탐색을 수행해야 한다.
+
+```java
+public static class GraphVertex {
+    public static enum Color { WHITE, GRAY, BLACK }
+
+    public Color color;
+    public List<GraphVertex> edges;
+}
+
+public static boolean isDeadLocked(List<GraphVertex> G) {
+    for (GraphVertex vertex : G) {
+        if (vertex.color == GraphVertex.Color.WHITE && hasCycle(vertex)) {
+            return true;
+        }
+    }
+    return false;
+}
+
+private static boolean hasCycle(GraphVertex cur) {
+    // 회색 노드를 만난다는 것은 사이클이 존재한다는 뜻이다.
+    if (cur.color == GraphVertex.Color.GRAY) {
+        return true;
+    }
+
+    cur.color = GraphVertex.Color.GRAY; // 현재 노드를 회색으로 칠한다.
+    // 현재 이웃 노드들을 순회한다.
+    for (GraphVertex next : cur.edges) {
+        if (next.color != GraphVertex.Color.BLACK) {
+            if (hasCycle(next)) {
+                return true;
+            }
+        }
+    }
+    cur.color = GraphVertex.Color.BLACK; // 현재 노드를 검색으로 칠한다.
+    return false;
+}
+```
+
+깊이 우선 탐색의 시간 복잡도는 $O(|V| + |E|)$이다. 모든 노드를 순회하고, 각 간선을 처리하는 데 상수만큼의 시간이 걸린다. 공간 복잡도는 최대로 사용하게 될 스택의 깊이인 $O(|V|)$이다. $|V|$보다 더 깊게 들어간다면 반복 호출된 노드가 반드시 존재하므로 해당 그래프에 사이클이 존재한다는 뜻이 된다. 즉, 이런 경우에 탐색을 일찍 종료시킬 수 있다.
