add java epi 18.5

--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -392,3 +392,49 @@ private static boolean hasCycle(GraphVertex cur) {
 ```
 
 깊이 우선 탐색의 시간 복잡도는 $O(|V| + |E|)$이다. 모든 노드를 순회하고, 각 간선을 처리하는 데 상수만큼의 시간이 걸린다. 공간 복잡도는 최대로 사용하게 될 스택의 깊이인 $O(|V|)$이다. $|V|$보다 더 깊게 들어간다면 반복 호출된 노드가 반드시 존재하므로 해당 그래프에 사이클이 존재한다는 뜻이 된다. 즉, 이런 경우에 탐색을 일찍 종료시킬 수 있다.
+
+## 문제 18.5 그래프 복제하기
+
+방향 그래프의 노드에 두 가지 정보가 들어 있다고 하자. 하나는 정수 레이블이고 다른 하나는 다른 노드로의 참조 리스트이다. 노드 u에 대한 참조가 주어졌을 떄, u에서 도달 가능한 노드들로 이루어진 그래프를 복제하는 알고리즘을 설계하라. 노드 u를 복제한 노드를 반환하면 된다.
+
+> 힌트: 기존 그래프의 노드에서 복제된 그래프로의 매핑을 만든다.
+
+u에서 시작해서 그래프를 순회한다. 아직 복제되지 않은 노드 혹은 간선을 만날 때마다 이를 복제된 그래프에 추가한다. 해시 테이블을 사용해서 기존 그래프의 노드에 상응하는 노드를 복제된 그래프에서 찾을 수 있도록 매핑을 만들어 놓으면 아직 방문하지 않은 노드나 간선이 무엇인지 쉽게 알 수 있다. 표준 그래프 순회 알고리즘이면 어느 것을 사용해도 무방하다. 다음은 너비 우선 탐색을 사용한 코드이다.
+
+```java
+public static class GraphVertex {
+    public int label;
+    public List<GraphVertex> edges;
+
+    public GraphVertex(int label) {
+        this.label = label;
+        edges = new ArrayList<>();
+    }
+}
+
+public static GraphVertex cloneGraph(GraphVertex g) {
+    if (g == null) {
+        return null;
+    }
+
+    Map<GraphVertex, GraphVertex> vertexMap = new HashMap<>();
+    Queue<GraphVertex> q = new LinkedList<>();
+    q.add(g);
+    vertexMap.put(g, new GraphVertex(g.label));
+    while (!q.isEmpty()) {
+        GraphVertex v = q.remove();
+        for (GraphVertex e : v.edges) {
+            // 노드 e를 복제한다.
+            if (!vertexMap.containsKey(e)) {
+                vertexMap.put(e, new GraphVertex(e.label));
+                q.add(e);
+            }
+            // 간선을 복제한다.
+            vertexMap.get(v).edges.add(vertexMap.get(e));
+        }
+    }
+    return vertexMap.get(g);
+}
+```
+
+공간 복잡도는 결과 그래프와 같은 $O(|V| + |E|)$이다. 결과 그래프에 대한 공간을 제외한다면 공간 복잡도는 해시테이블과 너비 우선 탐색의 큐에서 사용되는 만큼인 $O(|V|)$가 된다.
