add java epi 18.6

--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -438,3 +438,60 @@ public static GraphVertex cloneGraph(GraphVertex g) {
 ```
 
 공간 복잡도는 결과 그래프와 같은 $O(|V| + |E|)$이다. 결과 그래프에 대한 공간을 제외한다면 공간 복잡도는 해시테이블과 너비 우선 탐색의 큐에서 사용되는 만큼인 $O(|V|)$가 된다.
+
+## 문제 18.6 와이어로 회로 연결하기
+
+인쇄 회로 기판(PCB)에 달린 수많은 전자 핀(electrical pin)을 생각해 보자. 각 핀의 쌍은 서로 연결되어 있을 수도 있고 연결되어 있지 않을 수도 있다. 그림 18.8에서 각 노드는 핀을 나타내고, 간선은 두 핀 사이에 와이어의 존재 유무를 나타낸다. (노드의 색깔이 가지는 의미는 뒤에서 설명한다.)
+
+핀의 집합과 각 핀의 쌍을 연결하는 와이어의 집합이 주어졌을 때, 노드의 절반을 왼쪽, 나머지 절반을 오른쪽에 배치시킴으로써 모든 와이어를 왼쪽과 오른쪽이 연결되도록 배치할 수 있는지 확인하는 알고리즘을 설계하라. 이렇게 노드를 나눌 수 있으면 그 결과를 반환하라. 그림 18.8의 밝은색 노드와 어두운색 노드는 이렇게 분할된 결과를 보여 준다.
+
+> 힌트: 그래프로 모델링한 후에 사이클의 길이가 홀수인 경우에 대해 생각해 보라.
+
+가능한 모든 방법으로 핀을 두 개의 집합으로 나누어 볼 수 있다. 하지만 가능한 모든 방법의 개수가 너무 많다.
+
+이보다 나은 방법은 노드를 나눌 때 노드 사이의 연결 정보를 사용하는 것이다. 핀에 0부터 p-1까지 숫자를 부여한 뒤, 이들로 이루어진 무방향 그래프 G를 만든다. 두 핀 사이에 와이어가 존재한다면 간선을 추가한다. 문제를 간단히 하기 위해 그래프 G는 연결되어 있다고 가정하자. 그래프가 연결되어 있지 않다면, 연결된 컴포넌트들을 독립적으로 처리하면 된다.
+
+임의의 노드 $v_0$에서 시작해 너비 우선 탐색을 수행한다. 임의의 $v_0$을 왼쪽 집합에 배치하고, $v_0$으로부터 거리가 홀수인 모든 노드를 오른쪽 집합에 배치한다.
+
+무방향 그래프에서 너비 우선 탐색을 수행한다고 하자. $v_0$으로부터 거리가 d만큼 떨어져 있는 노드에서 아직 방문하지 않았던 간선에 대해 탐색을 시작한다고 했을 때, 다음과 같은 두 가지 경우가 있을 수 있다. 간선에 연결된 노드가 이전에 방문하지 않았던 노드라면 $v_0$에서 해당 노드까지의 거리는 d+1이 된다. 만약 이미 발견했던 노드라면 $v_0$에서 해당 노드까지의 거리 또한 d일 것이다. 여기서는 거리가 k인 노드에서 탐색을 수행할 때 거리가 k인 노드를 방문하게 될 일은 없다고 가정한다. 그러면 거리가 k인 노드와 연결된 노드의 거리는 k+1이 되고, 따라서 모든 와이어는 왼쪽과 오른쪽을 연결하게 된다.
+
+거리가 k인 노드에서 또 다른 거리가 k인 노드를 발견하는 순간 탐색을 멈춘다. 왜냐하면 이런 경우에는 핀을 왼쪽 절반과 오른쪽 절반으로 나눌 수 없기 때문이다. 그 이유는 다음과 같다. u와 v가 그러한 노드라고 가정하자. 너비 우선 탐색 트리에서 u와 v의 첫 번째 공통 조상이 a라고 하자. (나비 우선 탐색을 $v_0$에서 시작했으므로 공통 조상은 반드시 존재한다.) 너비 우선 탐색 트리에서의 경로 $P_u$와 $P_v$는 각각 a에서 u로의 경로와 a에서 v로의 경로를 말하고 이 둘의 길이는 같다. 따라서 $P_u$, 간선 (u,v), $P_v$에 의해 길이가 홀수인 사이클이 하나 형성된다. 노드를 두 개의 집합으로 나누려면 사이클이 존재하는 간선의 개수가 짝수여야 한다. 사이클의 간선을 따라가며 두 집합에 노드를 하나씩 번갈아 놓고, 시작 노드로 돌아왔을 때 시작 노드가 속한 집합이 바뀌면 안 된다. 따라서 사이클의 길이가 홀수이면 모든 간선이 두 집합 사이를 연결하도록 노드를 배치시킬 수 없다.
+
+```java
+public static class GraphVertex {
+    public int d = -1;
+    public List<GraphVertex> edges = new ArrayList<>();
+}
+
+public static boolean isAnyPlacementFeasible(List<GraphVertex> G) {
+    for (GraphVertex v : G) {
+        if (v.d == -1 && !BFS(v)) { // 방문하지 않은 노드
+            return false;
+        }
+    }
+    return true;
+}
+
+private static boolean BFS(GraphVertex s) {
+    s.d = 0;
+    Queue<GraphVertex> q = new ArrayDeque<>();
+    q.add(s);
+
+    while (!q.isEmpty()) {
+        for (GraphVertex t : q.peek().edges) {
+            if (t.d == -1) { // 아직 방문하지 않은 노드
+                t.d = q.peek().d + 1;
+                q.add(t);
+            } else if (t.d == q.peek().d) {
+                return false;
+            }
+        }
+        q.remove();
+    }
+    return true;
+}
+```
+
+시간 복잡도는 너비 우선 탐색과 같은 $O(p+w)$가 된다. 여기서 w는 와이어의 개수이다. 공간 복잡도는 $O(p)$가 된다.
+
+그림 18.8처럼 칠할 수 있는 그래프를 이분 그래프라 한다. 또는 2색 그래프라고도 하는데, 이웃 노드끼리 같은 색이 되지 않도록 그래프 전체를 칠할 때 두 가지 색이면 충분하기 때문이다.
